specific characters replaced

--- a/steins_gate_0/docs/0003.md
+++ b/steins_gate_0/docs/0003.md
@@ -42,7 +42,7 @@
 &emsp;&emsp; 初恋是什么时候……之类的，都好好回答一下吧！’  
 &emsp;&emsp; 嗯……”  
 真帆（Amadeus）：“啊，已经不用继续翻译了！  
-&emsp;&emsp; 很害羞欸，能消停下吗！这些问题我都不会回答的！”  
+&emsp;&emsp; 很害羞诶，能消停下吗！这些问题我都不会回答的！”  
 教授接着说了些什么，随后CG的比屋定真帆哼的一下面向一旁。  
 真帆（Amadeus）：“信用卡号码什么的，更是无可奉告！  
 &emsp;&emsp; 还有，一周前穿的睡衣的颜色怎么可能记得啊。”  
