--- a/steins_gate_0/docs/0004.md
+++ b/steins_gate_0/docs/0004.md
@@ -35,13 +35,13 @@
 “曾祖父和曾祖母啊，是移民哟。我是在美国出生也是在美国长大的。”  
 “半混血…看上去也不像啊。四分之一混血？”  
 “答错了。祖父、祖母、父亲、母亲全部都是日本人哟。DNA可是纯正的Japanese。”  
-“欸——？”  
+“诶——？”  
 “……”  
 “……”  
 
 对话在这里中断了。在说话技巧方面，我属于很烂的类型。如果是以前的我，现在应该已经中二病全开，完全不顾对方地自己一个人说下去，然而那并不意味着对话成立。对于第一次见面的人究竟该怎么说话完全不明白，场面话什么的也不会说。为了成为正常人，我姑且还去买过男士杂志想要学习一下……但是完全没派上用场。我又看向雷斯吉宁教授的方向。现在好像正在和许多学者讨论关于神经元的话题。于是我继续对比屋定真帆说道：  
 “今天…真是不好意思啊。”  
-“欸？怎么了？”  
+“诶？怎么了？”  
 “那是…研讨会开到一半出来打断——”  
 “啊那个呀，不用在意哦。就算你不出声，我大概也会做同样的事。那种人真是不可原谅！”  
 “合适吗，说出这种话？教授不是说过，作为科研人员应该时刻保持冷静来着。”  
@@ -65,7 +65,7 @@
 “——于是，在最后，在往侧额叶重新返写记忆的过程中，嗯……  
 &emsp;&emsp; 一同被拷贝了的模拟脉冲会往前脑叶那边输送，记忆检索信号就会正常的运作起来，我是这么想的。”  
 “你是……自己发现的这个吗？”  
-“欸？啊，不是……”  
+“诶？啊，不是……”  
 比屋定真帆再次看向我刚才给她的名片。  
 “你不是专攻脑科学的吧。那到底是从谁那里…还是看了什么论文？  
 &emsp;&emsp; 不，那么说也不对，现在的论文上不可能有提到这些才对。”  
@@ -82,7 +82,7 @@
 ……我下定决心。为了追寻自己的梦想，必须做点什么。  
 
 “实际上这个理论，是红莉栖告诉我的。”  
-“欸……？刚才……说了什么？”  
+“诶……？刚才……说了什么？”  
 “我是从牧濑红莉栖哪里，知道这些东西的。”  
 “红莉栖……告诉你……什么时候？为什么？”  
 “她在这边留学的时候，成为了朋友，然后就聊到这些。”  
@@ -106,7 +106,7 @@
 她笑了……我本来这样想着，可是比屋定真帆却突然掉下了眼泪。  
 “怎，怎么了？”  
 我慌忙递出手绢。  
-“欸…欸？”  
+“诶…诶？”  
 对于自己在哭这件事，她好像也很疑惑的样子。  
 我很是不解，刚才的对话中，有什么踩到她的地雷了吗？  
 “不，不要紧吧？”  
@@ -114,7 +114,7 @@
 她没有收下我的手绢，而是从白大褂里取出了纸巾擦了擦眼角。  
 
 “勇敢的爱因斯坦三世啊！”  
-“欸？！”  
+“诶？！”  
 听到似曾相识的男性声音，我回头看去。雷斯吉宁教授满脸笑容，正大步向我走来。然后就这样顺势抓住了我的手，十分强硬的和我握手。他的手像熊掌一样大。不，不仅仅是手，现在站在我面前的他比演讲的时候看起来还要更加高大。我的个子已经算高了，他比我还要高出大概一头的样子。  
 “那、那个…教授，我，我那个……”  
 不好，面对突然的事情我开始慌了，连自我介绍都没办法好好的说出来。  
