--- a/steins_gate_0/docs/0008.md
+++ b/steins_gate_0/docs/0008.md
@@ -18,7 +18,7 @@
 “之前参加ATF研讨会的学生哟。因为觉得他对研究相当热心，所以带来了。”  
 比屋定真帆并没有把我是红莉栖生前的熟人这一点告诉『Amadeus』的“红莉栖”。  
 为什么呢？告诉她了会不方便？或者说，让我自己去告诉她？  
-“欸？能让学姐这么说，你还真是了不起。”  
+“诶？能让学姐这么说，你还真是了不起。”  
 画面中的“红莉栖”面向我微笑着。  
 “啊，那个……”  
 冷静下来！  
@@ -32,7 +32,7 @@
 “他的专攻并不是并不是脑科学。但是，他说对我们的研究非常感兴趣。”  
 “这样吗？”  
 “雷斯吉宁教授似乎也很中意他，近期还在考虑让他当我的助手呢。”  
-“……欸？”  
+“……诶？”  
 因为比屋定真帆突然说了奇怪的话，我惊讶的抬起了头。我？做比屋定真帆的助手？这样的话我不就是被维克多·孔多利亚大学……？  
 “啊啦？不满意吗？”  
 “不是满意不满意这种问题……”  
@@ -102,7 +102,7 @@
 到底要说什么好，已经混乱了。因此，不知不觉嘴里吐出的话语是：  
 “时间机器……能制造出来吗？”  
 这是曾经，在别的世界线我在红莉栖的讲座上和她初次辩论的话题。那个时候，我被单方面驳倒，被辩得体无完肤。  
-“欸？时间机器，吗？”  
+“诶？时间机器，吗？”  
 “还在想你会从什么话题开始，这是忽然干什么？”  
 “只，只是测试啊，关于能不能做到思考实验这点。”  
 不单是“红莉栖”楞了一下，比屋定真帆也很惊讶于我提出的问题，我慌忙的编了个借口。  
