--- a/steins_gate_0/docs/0010.md
+++ b/steins_gate_0/docs/0010.md
@@ -40,7 +40,7 @@
 “呐，学姐？有关刚刚的话……”  
 “嗯？刚刚什么事？”  
 “是‘自言自语’的事。”  
-“欸？哦……”  
+“诶？哦……”  
 红莉栖好像又突然想到了什么新的点子。这个后辈经常会这样，真帆已经习惯了。  
 “那个是不是能成为‘自我’的一种证明呢？”  
 “『Amadeus』的？”  
@@ -86,7 +86,7 @@
 “总而言之路上小心，我会期待着你的礼物啦~”  
 “什么礼物比较好？”  
 “嗯……难得你去一趟秋叶原，要是有什么稀奇的就好了——你对秋叶原挺熟的吧？”  
-“欸？为什么？”  
+“诶？为什么？”  
 “在休息时间里，你不是经常看那种网页吗？”  
 “什……么？！难道是『Amadeus』告诉你的？”  
 “那孩子才不会这么做。有时你明明坐在我后面，却无意识地沉到视频里了。”  
