--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -46,9 +46,9 @@
 枫：“我也是，没有问题哟。”  
 枫也随即点头。只有由季还在踌躇是否答应。  
 由季：“我的话……到底怎么办呢？”  
-真由理：“欸？莫非是，已经先有约了？”  
+真由理：“诶？莫非是，已经先有约了？”  
 吹雪：“那是，拥有由季这种程度的美貌，邀请一起度过圣诞夜的男人估计都堆成山了。”  
-真由理：“欸欸！？”  
+真由理：“诶诶！？”  
 由季：“才，才没有这种事情！”  
 吹雪：“是这样吗？那么我可不会错过机会！”  
 由季：“要是能和吹雪酱在圣诞节约会的话，比任何事情都要优先呢。”  
@@ -83,7 +83,7 @@
 真由理：“真由喜干劲满满的哟~呼呼！”  
 真由理这么说着鼓起了干劲，做了个小小的胜利姿势。  
 枫：“圣诞服的话，可爱的迷你裙很不错啊。配上白色的过膝长袜和红色的长筒皮靴……”  
-吹雪：“欸——？枫酱倒还好，我好像不适合这种吧”  
+吹雪：“诶——？枫酱倒还好，我好像不适合这种吧”  
 克美没有自信地向真由理和由季问道。  
 由季：“明明是很喜欢可爱的衣服的说~”  
 被戳中要点，吹雪连辩解的话都说不出。对于自己的容貌很像男孩子一样这件事，她一直很自卑，所以也有衣服不合适的自觉。就算这样，犹豫心理上也是完全的少女，所以也有想要穿可爱衣服的愿望。  
@@ -93,26 +93,26 @@
 真由理：“像桶子君一样说话可不行的哟~”  
 吹雪：“唔……把我和那个Hentai（变态）绅士当作一类，我受到打击了。”  
 由季：“话说，真由理酱也会一起穿的吧，圣诞老人的衣服。”  
-真由理：“欸？”  
-由季：“欸个什么！这么可爱，多Cos点吧。”  
+真由理：“诶？”  
+由季：“诶个什么！这么可爱，多Cos点吧。”  
 真由理：“但是，真由喜是专门负责制作的……”  
 吹雪：“我有异议！那样的话太浪费了的说！”  
 真由理：“真是的，连吹雪酱都……”  
 由季：“而且——冈部先生也想看看真由理酱的美妙身姿吧”  
-真由理：“唔欸欸？冈伦”  
+真由理：“唔诶诶？冈伦”  
 突然出现的这个名字，让真由理发出惊呼。  
 吹雪：“冈伦？啊啊，真由喜的男朋友呢。”  
 吹雪见过几次。给她的印象是，身高很高但是脸色不太好，身体也很瘦，似乎总是非常寂寞的笑着的人。但是，按真由理的说法，似乎他直到半年前还是更加桀骜不驯且旁若无人，但却很温柔且有领导力，是和现在截然不同的印象。因为经过真由理心里的美化，吹雪也不清楚有多少的可信度。  
 
 ![](../pics/0011-4.png)
 
-真由理：“唔欸欸欸欸欸——！！”  
+真由理：“唔诶诶诶诶诶——！！”  
 真由理由于吹雪的“男朋友”一词，变得更加惊慌失措了。  
 真由理：“那个那个，吹雪酱，冈伦和真由喜并不是那种关系哟！”  
 “又来了又来了……”（×3）  
 不光是吹雪，连由季和枫都不相信真由理的话。实际上，冈部伦太郎和真由理两个人与其说是恋人，倒不如说怎么看都像是在一起生活了很多年的夫妇。  
 真由理：“真的啦！因为，冈伦有别的喜欢的人了。”  
-吹雪：“欸？！”  
+吹雪：“诶？！”  
 因为真由理仿佛毫不在意一样爽快地说出的话，吹雪瞪大了眼睛。  
 由季：“是，是这样的吗？”  
 枫：“真的吗……”  
@@ -124,13 +124,13 @@
 看着真由理的笑容，吹雪感觉很难过。她突然产生了一种强烈的，想要紧紧抱住面前这个同岁的软乎乎的女孩子的想法。  
 真由理：“比起那个比起那个~呐，由季，你呢？”  
 像是要吹走尴尬的空气一样，这次是真由理笑眯眯地靠近由季。  
-由季：“欸？我？”  
+由季：“诶？我？”  
 真由理：“嗯，刚才的话题。果然圣诞节还是和男朋友一起过吗？”  
 由季：“啊哈哈，都说了真的没有啦。”  
 真由理：“是吗？”  
 由季：“大家都误会了啦，我并没有那么受欢迎啦。  
 &emsp;&emsp; 悄悄给你们说，我单身年龄和实际年龄是一样的。”  
-吹雪：“欸欸！！”  
+吹雪：“诶诶！！”  
 在真由理之后，由季都说出意外的事实，吹雪受到了持续的震惊。  
 枫：“是这样吗？”  
 由季：“也，也不至于这么吃惊吧……”  
@@ -138,7 +138,7 @@
 真由理开始扭扭捏捏起来。  
 由季：“嗯？”  
 真由理：“比如桶子君，你觉得怎么样？”  
-由季：“欸？桥田君？”  
+由季：“诶？桥田君？”  
 真由理：“嗯”  
 吹雪：“等等！你到底在说什么啊，真由喜！那个桥田可是Hentai绅士哟！”  
 枫：“由季可是会遭毒手的……”  
@@ -149,7 +149,7 @@
 ——就是这样的危险人物。然而，被问及的由季本人，不仅仅很困扰的态度，甚至还表现出有些寂寞的感觉。  
 “嗯……桥田君虽然是个好人，但怎么说呢……  
 &emsp;&emsp; 像我这样的女孩子，他可能并不太喜欢吧。”  
-“欸欸？！”  
+“诶诶？！”  
 真由理不是一般的惊讶。过于惊讶，以至于她手中的行李箱掉到了地上，而她对此毫不在意，拼命地向由季说着：  
 “没，没有那样的事哦！  
 &emsp;&emsp; 桶子君呢，那个呢，对于由季可是萌得很呢！  
@@ -166,7 +166,7 @@
 “那，那个是……那个是……”  
 不止为何，真由理现在像是要哭出来似的表情盯着由季。虽然想说什么，但是只是嘴唇颤动却并没有说出来，就是这种样子。  
 “真由理酱？”  
-“欸……欸嘿嘿……没什么的说……”  
+“诶……诶嘿嘿……没什么的说……”  
 明显不是“什么都没有”的样子。吹雪实在看不下去她这个样子，于是解放了自己的冲动——  
 
 “真由喜，不要露出这样的表情。真由喜笑着的时候是最可爱的。  
@@ -218,7 +218,7 @@
 “发现了哟。”  
 吹雪和枫已经认识快两年了。年龄有些差异，关系就像姐妹一样。正因为如此，枫这个时候才这么敏锐。枫的性格比较安静，相对地，对周围的事看得更清楚些。由于吹雪的性格太过一目了然，在枫面前也无法撒谎。于是吹雪放弃了，嘟囔地开口说起**那件事**。  
 “真由喜啊……死掉了。”  
-“欸……？什么？怎么回事？”  
+“诶……？什么？怎么回事？”  
 吹雪回想起来，那不愿想起的噩梦。就算不愿意，也还是从脑海中浮现的，那个景象。  
 “我会做一种梦。  
 &emsp;&emsp; 大概是夏天那会儿吧，每天每天，在梦中真由喜都会死去。  
