--- a/steins_gate_0/docs/0014.md
+++ b/steins_gate_0/docs/0014.md
@@ -66,7 +66,7 @@
 &emsp;如果有了在意的事，我会报告的」  
 『那就拜托你了哦~虽说我觉得那很累的』  
 
-“欸嘿嘿~~”  
+“诶嘿嘿~~”  
 “你好像很高兴啊？”  
 “嗯！很开心哟~”  
 但是，我却相反。一旦来到这个地方，我紧张得胃液都像要逆流出来了。不太想和铃羽碰面啊……  
