--- a/steins_gate_0/docs/0015.md
+++ b/steins_gate_0/docs/0015.md
@@ -103,7 +103,7 @@
 “是这样吗？”  
 “啊。未来的桶子也还是这样的感觉吧。”  
 “不过更加瘦一些，看起来更帅的说。”  
-“欸？无法想象啊。”  
+“诶？无法想象啊。”  
 “……”  
 “……”  
 对话到这里又中断了。其实，我们之间不得不说的问题堆积如山。所以，正因如此，我什么都无法说出口。说不定，对铃羽来说也是这样。没有其他的事可做，我和铃羽都自然地看向了电视机的画面。主持人正播报着的新闻，是有关东京银座，法国时尚名牌 *Le Paradis* 的开业活动。在主持人说明的同时，100名以上的女性顾客从早晨排队至今的样子被播放了出来。  
