--- a/steins_gate_0/docs/0017.md
+++ b/steins_gate_0/docs/0017.md
@@ -90,7 +90,7 @@
 &emsp;&emsp; 这也是对教授他们而言巨大的障碍之一。  
 &emsp;&emsp; 其实，人类所拥有的**模糊性**，我还不能完全重现出来。  
 &emsp;&emsp; 也就是说，**没有办法完全模仿‘遗忘’这种大脑的高度机能**。”  
-“欸？但雷斯吉宁教授在ATF演讲时说过，『Amadeus』也会忘掉不必要的东西……”  
+“诶？但雷斯吉宁教授在ATF演讲时说过，『Amadeus』也会忘掉不必要的东西……”  
 “对，的确可以忘掉。但是，我也说过的吧？我们会像‘秘密日记’一样留有记录。  
 &emsp;&emsp; 结果，那里面自然会留下所有的信息，只是当下无法读取而已。  
 &emsp;&emsp; 如果载入这些信息，‘忘却’的数据就会重新回到记忆里。懂了吗？  
@@ -148,7 +148,7 @@
 “啊！脸红什么的才没有啦！  
 &emsp;&emsp; 只是，被当成女孩子什么的……连想都没想过，有点吓到了。”  
 就连那样的反应方式，不都和红莉栖一样吗？  
-“（呢喃）我，就是对你的这种地方，喜——欸……！”  
+“（呢喃）我，就是对你的这种地方，喜——诶……！”  
 吓了一跳。我差点说了什么？我对这个显示在液晶屏幕里，3D建模出的，小小的，仿造出人型的0和1的集合体，差点说了什么？  
 “呐，可以告诉我吗？我们以前认识的吧？  
 &emsp;&emsp; 就是，你和我的原型的意思。”  
