--- a/steins_gate_0/docs/0019.md
+++ b/steins_gate_0/docs/0019.md
@@ -31,7 +31,7 @@
 从刚才开始比屋定真帆就一句话也不说，一脸不高兴的样子，一味地检查着『Amadeus』的记录的样子。我都快待不下去了，真希望不要在我在的时候看记录啊。  
 “我知道了。关于放弃测试员身份，就如你希望的办吧。  
 &emsp;&emsp; 只是，登录权限就这样留在你的手机上，你不介意吧？”  
-“欸？”  
+“诶？”  
 “今后，与『Amadeus』对话也好，不对话也好，都是你的自由。  
 &emsp;&emsp; *‘Kurisu’* 那边，我会和她说不要主动联络你的。  
 &emsp;&emsp; 我们不想至此就结束与你的关系啊，  
@@ -77,7 +77,7 @@
 “啊，那件事。”  
 比屋定真帆马上就想到了的样子，点了下头。  
 “从红莉栖的母亲那里来了电话，说是家里被放火了。”  
-“欸？没事吧？”  
+“诶？没事吧？”  
 “刚好那天不在家的原因，所以没事的样子。”  
 我稍微松了口气。考虑到她作为红莉栖的母亲，不希望她遭遇更多不幸的事情。我情不自禁地从心底这么祈祷着。  
 “我，曾经相当地受红莉栖母亲的疼爱，休息日也经常被邀请到她们家里。  
