--- a/steins_gate_0/docs/0022.md
+++ b/steins_gate_0/docs/0022.md
@@ -50,7 +50,7 @@
 “知道了啦……”  
 铃羽闹别扭一样地咕咚倒下，裹上了被子。  
 对真由姐能够直截了当地说出自己想法的铃羽，面对由季却无论如何都没办法强硬起来。  
-“欸嘿嘿~”  
+“诶嘿嘿~”  
 “什么？”  
 看着两人相处的真由理突然可爱地笑了出来，引得铃羽不明就里地发问。  
 “觉得铃小姐这么看的话，好可爱呢~”  
@@ -75,7 +75,7 @@
 
 留下来的由季把真由理做的炖菜稍微调整了一下味道，关掉了火。  
 “啊，对了，铃羽小姐，出汗了吧？吃饭前，给你擦擦身体吧？”  
-“欸？不是说了不用了吗？”  
+“诶？不是说了不用了吗？”  
 由季每天都像这样想帮忙，铃羽每次都拼命拒绝。  
 “虽然不能淋浴，但是不好好清洁的话是不可以的哦。”  
 “昨天和前天都擦过了，可以了啊。一星期或两星期不管又不会死掉……”  
@@ -136,12 +136,12 @@
 “嗯……刚刚的歌，是什么？”  
 “歌？”  
 “你在淋浴间里，那个……”  
-“欸、欸？难道我在唱歌吗？呜啊，好难为情。  
+“诶、诶？难道我在唱歌吗？呜啊，好难为情。  
 &emsp;&emsp; 明明不擅长却喜欢唱歌，一不小心就哼出来了呢……”  
 “没什么，擅长不擅长什么的不用在意的。  
 &emsp;&emsp; 是什么歌啊？很熟悉却想不起来了。”  
 “啊哈哈，我也是呢……”  
-“欸？”  
+“诶？”  
 “应该说只记得比较印象深刻的地方了吧。可能是小时候教育节目的歌什么的吧……  
 &emsp;&emsp; 啊哈……对不起没帮上忙。铃羽是什么时候听过的那首歌？”  
 “我也是小时候呢。那个，妈妈经常唱呢……”  
