--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -10,7 +10,7 @@
 “能啊。6点开始是吧？”  
 “嗯~现在，在大学？”  
 “没，在和光市。在认识的教授的，应该是研究室的那种地方叨扰着。”  
-“呼欸欸~和光市……”  
+“呼诶诶~和光市……”  
 这家伙，绝对连和光市在哪都不知道吧。  
 “赶得上吗？”  
 “不要紧的。”  
@@ -20,12 +20,12 @@
 菲利斯：“冈伦~等你喵~”  
 绹：“在，在等……你！”  
 吹雪：“来啊，琉华君也是~”  
-琉华：“欸欸？！我并不是女……”  
+琉华：“诶诶？！我并不是女……”  
 枫：“琉华君也在Cosplay哟~”  
 琉华：“不，不好意思！马上脱下来！现在马上就脱下来……！”  
 由季：“啊啦，真是可惜，明明这么合身的。”  
 “真是热闹啊……”  
-“欸嘿嘿~现在正在绝赞准备中~”  
+“诶嘿嘿~现在正在绝赞准备中~”  
 吹雪：“真由喜她啊，现在穿着超级迷你裙版的圣诞服，非常非常可爱的哟~  
 &emsp;&emsp; 顺便一提，胖次的颜色是粉色da☆ze！”  
 “呼哇！吹雪酱你在说些什么啊！！”  
