--- a/steins_gate_0/docs/0025.md
+++ b/steins_gate_0/docs/0025.md
@@ -12,7 +12,7 @@
 时间机器内部被刻下的弹孔。让铃羽想起了曾经在这个机器里发生的事。那个时候是和篝最后的一次交谈。篝用枪指着她的额头说了这番奇怪的话。之后，就再也找不到篝了。  
 
 “铃羽，怎么在发呆？难道身体还是不舒服吗？”  
-“欸？”  
+“诶？”  
 当铃羽回过神来的时候，身为父亲的桶子正很担心地窥探着她，然后递来了螺帽。  
 “啊啊，不好意思。没什么。”  
 铃羽点了点头，取过那个螺帽。  
@@ -70,7 +70,7 @@
 铃羽沉默，抬起脚用脚尖戳了一下父亲的小腿。  
 “我是很认真的在和你说。下次再开玩笑的话，就踢了哟？”  
 “在迷茫吗？嘛……那个，什么来着……不也没什么关系嘛。”  
-“欸？”  
+“诶？”  
 “把‘现在’消除掉，不也挺好吗？”  
 “因为你看，在未来，有很多人死了对吧？这种事谁都不喜欢吧。”  
 “爸爸……”  
@@ -92,7 +92,7 @@
 “嗯？”  
 “幻灭什么的，是骗你的。爸爸不是那种拿着枪打仗的人。  
 &emsp;&emsp; 未来也是这样的，一直到处躲藏才是你的工作。”  
-“欸欸？未来的我也太差劲了吧？”  
+“诶诶？未来的我也太差劲了吧？”  
 “但是，这样就够了。爸爸有别的战斗要打。  
 &emsp;&emsp; 就是因为这个原因，所以我们才跟着你。”  
 “铃羽……”  
