--- a/steins_gate_0/docs/0026.md
+++ b/steins_gate_0/docs/0026.md
@@ -30,7 +30,7 @@
 “真的？”  
 “嗯~”  
 “谢谢真由理姐姐！”  
-“欸嘿嘿~”  
+“诶嘿嘿~”  
 众人之中只有绹小小的身影还穿着常服，一脸好奇与羡慕地盯着其他大姐姐们——但是琉华子是男的！刚刚安慰好了她的真由理凑过来招呼我：  
 “冈伦，快进来呀”  
 “桶子和铃羽呢？”  
@@ -82,7 +82,7 @@
 菲利斯：“但实际上很喜欢甜食喵。”  
 琉华子：“而且，待人也很亲切。”  
 绹：“之前，向她打招呼，她回我了哟。”  
-由季：“欸……我也想要和铃羽小姐关系变得更好呢……”  
+由季：“诶……我也想要和铃羽小姐关系变得更好呢……”  
 真由理：“会的哟~一定没问题的，你们一定合得来的。”  
 这时，楼前的小巷，桶子的声音通过窗户传了进来。  
 “好——要进去了哦——要和铃羽一起进去了哦——！”  
@@ -126,15 +126,15 @@
 &emsp;&emsp; 所以不要生由季和桶子君的气，要生就生真由喜的气吧！”  
 铃羽：“真由姐姐真是的，我平常有一直在生气吗？”  
 铃羽再次环视室内。  
-铃羽：“欸~好厉害啊，真不敢相信这是平时的那个LAB呢。”  
-真由理：“是吧~大家一起装饰好的呢，欸嘿嘿~”  
+铃羽：“诶~好厉害啊，真不敢相信这是平时的那个LAB呢。”  
+真由理：“是吧~大家一起装饰好的呢，诶嘿嘿~”  
 铃羽：“嗯，真的很厉害，太漂亮了。”  
 铃羽有些不知所措地笑着，就这么徐徐后退，打算出门。  
 真由理：“要，要去哪儿？”  
-铃羽：“欸？去哪……真由姐姐你们要开派对吧？打扰你们就不好了。  
+铃羽：“诶？去哪……真由姐姐你们要开派对吧？打扰你们就不好了。  
 &emsp;&emsp; 哥哥也真是的，一点也不机灵，这种场合我在也没什么用不是吗？”  
 菲利斯：“没那种事喵！一起来派对喵！”  
-铃羽：“欸？但是……这种事我也没有经验……”  
+铃羽：“诶？但是……这种事我也没有经验……”  
 真由理：“只是开开心心吃东西聊天而已。所以，一起来吧？”  
 真由理仿佛像说决不让你逃走一样，紧紧用自己的手缠住铃羽的手。  
 铃羽：“真，真由姐？”  
@@ -170,7 +170,7 @@
 
 “大家喵~喝的东西都准备好了喵？  
 &emsp;&emsp; 那么，先请策划这次派对的真由喜来说点什么喵~”  
-“欸，欸~？”  
+“诶，诶~？”  
 突然被甩到话题的真由理，慌慌张张的站了起来。过程中碰到了坐在旁边的琉华子，两人手中杯子里的东西差点溅出来了。  
 “哇，哇啊？琉华君，抱歉呢！”  
 “真由理酱，冷静点。”  
@@ -185,7 +185,7 @@
 “这个，那个……总而言之，大家能过得很开心的话，真由喜就很高兴啦~说完啦~”  
 真由理微微鞠躬低头，对铃羽微笑了一下。铃羽则用不知该笑还是如何的暧昧表情回应着。  
 “那么，就来干杯喵~真帆喵，领头就拜托了喵~”  
-“欸？我，我来！？”  
+“诶？我，我来！？”  
 “好不容易才来一次喵，顺便就加上自我介绍吧喵~”  
 被指名的比屋定，一副苦涩的样子站了起来，考虑了一会儿后开了口。  
 “今天能被大家邀请到这里，十分感谢。  
@@ -233,7 +233,7 @@
 “真帆小姐跟雷斯吉宁先生也是，请尝尝看~”  
 “谢谢。”  
 “嗯~好吃！这真是 *Oishi*（好吃）啊！”  
-“欸嘿嘿~”  
+“诶嘿嘿~”  
 “那，这边也试试怎么样？虾仁奶汁烤菜，还有，炸鸡也试着调了民族风味——”  
 *“Excellent!”*  
 “还真是讲究呢。”  
