--- a/steins_gate_0/docs/0027.md
+++ b/steins_gate_0/docs/0027.md
@@ -50,9 +50,9 @@
 “为什么会变成这种话题……”  
 “什么什么？真由喜怎么了？”  
 听到自己的名字，真由理表现出兴趣。  
-“欸？这个是……什么呢？”  
+“诶？这个是……什么呢？”  
 “情趣睡衣哟，真由喜~而且是超级可爱性感的款式~为了冈伦穿起来吧？”  
-“唔欸欸欸~？”  
+“唔诶诶诶~？”  
 “这怎么能行啊……”  
 “那么，冈伦先生自己穿的话……也是可以的哟？”  
 “这……这个还给你。自己怎么开心怎么穿吧！”  
@@ -62,7 +62,7 @@
 “呃……”  
 “啊，那个是我拿来的礼物……要是能让真由理酱穿的话我会很开心的。请~”  
 这次是枫。  
-“唔欸欸~？”  
+“唔诶诶~？”  
 “你们难道就只有这样的想法吗……”  
 “真，真由喜的话，已经拿到了冈伦的礼物了，所以不用了！”  
 或许是因为青梅竹马的缘分，抽到我的礼物的是真由理。顺带一提，我准备的是，金块形状的巨大的巧克力。就是在堂吉诃德的聚会商品专柜卖的那种。但是貌似吹雪和枫正一脸鄙视地看着我的礼物和我本人。  
@@ -93,8 +93,8 @@
 菲利斯……语气太刻意了吧……  
 “啊，那个……是我……”  
 桶子羞怯地举起了手。  
-由季：“欸？！”  
-吹雪：“唔欸欸！？”  
+由季：“诶？！”  
+吹雪：“唔诶诶！？”  
 枫：“啊啦呐~！”  
 绹：“桶子叔叔，真了不起呢！”  
 铃羽：“嗯~？挺能干的嘛，哥哥。”  
@@ -118,7 +118,7 @@
 “因为，看着你们两个人太着急了啊。”  
 “可是……我从来没有试过现实的约会……”  
 “母亲好像也是这样哟。”  
-“欸？是吗？”  
+“诶？是吗？”  
 “嗯。”  
 “这，这样啊……”  
 这时，由季从洗手间回来了，步伐相当不稳。虽然回到了座位上，还是冷静不下来扭扭捏捏的，吃着桌上的点心，偶尔瞟一瞟桶子那边。目前看来，电影票作战似乎进行得不错。太过关注的话，计划可能会暴露，所以现在尽量装作不知道会比较好。  
@@ -139,7 +139,7 @@
 “啊，对了，是这首曲子啊。”  
 铃羽忽然想到了什么站了起来。  
 “由季小姐，你看，你还记得吗？”  
-“欸？什么？”  
+“诶？什么？”  
 完全心不在焉的由季，忽然被铃羽搭话，很明显的手忙脚乱的样子。  
 “我睡着的时候，由季小姐在这里唱过这首歌的吧？”  
 “啊啊，这么说来确实。”  
