--- a/steins_gate_0/docs/0028.md
+++ b/steins_gate_0/docs/0028.md
@@ -41,7 +41,7 @@
 “这边！”  
 不知名的青年队员把我拉向墙上流着污水的洞。仔细看发现那是下水道的出口，大小刚够一个人弯腰通过。我们逆着淹过膝盖的流水在黑暗中前进，不多久嗅觉已经麻痹，也不觉得下水道臭了。途中出现多次岔道，带路的自卫队员似乎已经掌握了路线，毫不犹豫地前进着。这么走了一阵，又再次从下水道回到了河床。和最初的一样，这个河也是干的。不知道是回到了刚才那条河，还是到了另外一条，队员也没有告诉我。不管怎样，总算从那个充满恶臭的黑暗空间中脱出，我试图大吸一口新鲜空气。但是，刚吸进一点，就闻到了比下水道更糟的异臭，不由得退了两步。因为眼前的，是一副过于凄惨的光景。大量的尸体代替了河水堆叠在这个曾是河底的地方。因为大多数已经炭化，连数量也无以数计。远处，篝火一样的火焰在燃烧着，在大雨中猛烈地燃烧着。正在燃烧的，是堆积成山的曾经作为人的肉块。  
 “就快到了。也许会很难受，能跑吗？”  
-“欸？啊啊，能……”  
+“诶？啊啊，能……”  
 多亏自卫队员在和我说话才恢复了自我。如果没有这两个人，我可能已经疯了。两个人前后夹着我，在河里奔跑。空中依然不断传来直升机的声音，探照灯偶尔在附近划过时，我们就躲到那成山的尸体中，趴在地上躲避。  
 我原以为我在曾经的世界线漂流中已经见过很多了。  
 “死”。  
@@ -60,7 +60,7 @@
 “有话到那边再问。总之请快点。”  
 现在也还能听到外面的枪声，满肚子疑问的我被强行塞进了一辆车的后座里。  
 “这样就行了。希望你安全到达。”  
-“欸？你们呢？”  
+“诶？你们呢？”  
 “我们还有别的任务。再见。”  
 把我带到这里的两名队员向我敬礼告别，转身离开了车站。可能再也见不到他们了……我有这种预感。  
 装甲车门发出厚重的声音关上了。司机是一位看上去略比我年长的自卫队员。柴油机启动，在本来设计给电车使用的隧道中装甲车以相当快的速度疾驰着。不言而喻，乘坐感很糟糕，但只能忍受。虽然想去一趟秋叶原，但现在的气氛叫我无论如何也无法提出。  
