--- a/steins_gate_0/docs/0029.md
+++ b/steins_gate_0/docs/0029.md
@@ -42,7 +42,7 @@
 
 车子沿着冲绳轻轨的轨道，笔直向南边行去。看着沿途的街景，我不由得感叹：  
 “好暗啊……”  
-“欸，什么？”  
+“诶，什么？”  
 “没……明明有这么多的店铺，但是到处都是一片黑。”  
 众多的特许餐厅和大型超市，面向观光客的食堂，汽车租赁店等像排队一样被压缩摆放在一起。但是，无论哪家店都关着灯，一片寂静。路灯也几乎没有，行驶的车子都是日本和美国的军用车辆，完全没有行人的影子。  
 “现在实行了灯火管制和下午五点宵禁。  
@@ -74,7 +74,7 @@
 “是的。”  
 
 “话说回来，冈部君你和桥田君好像是在研究什么，对吧？”  
-“欸？”  
+“诶？”  
 下山突然把对话的矛头指向了我，让我十分慌张。研究？什么研究？糟糕，我这惊慌的样子一定很可疑。  
 “是做着怎样的研究啊？”  
 这样的话，我只能先在保险的范围内回答了。  
@@ -109,7 +109,7 @@
 “没，说起来那真是奇怪的事啊……”  
 下山装模作样地说着，摸了摸下巴。  
 “有和中濑十分相似的做白日梦的人。而且，不是一两个。”  
-“欸？”  
+“诶？”  
 “当然在程度上也有差异，但光是国内就已经发现了十几名左右。  
 &emsp;&emsp; 好像在海外也有。嘛，虽然只有西方国家的情报而已……”  
 “那样的事，仅仅是碰巧而已吧？”  
@@ -131,7 +131,7 @@
 “我觉得这应该是常识啊……现在的年轻人都不知道吗？  
 &emsp;&emsp; 没想到最近的学生都这么不用功啊。  
 &emsp;&emsp; 冈部君你多少知道的吧，戈里巴乔夫和列利钦这两位？”  
-“欸……嗯。嘛……”  
+“诶……嗯。嘛……”  
 “柏林墙的倒塌，还有经济改革。”  
 “是的，这些都在教科书里——”  
 说到一半，大脑中警钟激烈的响了起来。——总觉得不妥，下山的话有哪里不太对劲。  
@@ -241,7 +241,7 @@
 “欢迎大家来到这里！我是哈蒙德。欢迎各位。  
 &emsp;&emsp; 那么，*Mr. Okabe* 以外的各位，请乘坐巴士。”  
 这个男人操着一口不正宗却流利的日语。虽然满脸笑容，但却是一副说一不二的口气。其他的美军士兵则从刚才开始，就端着步枪一脸严肃的警戒着周围。下山一行人则只是在远处守着，默默地低着头，没有插手的意思。  
-“欸，冈伦以外是……什么意思……？”  
+“诶，冈伦以外是……什么意思……？”  
 “不用害怕。我们只是稍微向各位问一些话。  
 &emsp;&emsp; 之后，马上会将各位送去冲绳防卫局！  
 &emsp;&emsp; 来吧，请。”  
