--- a/steins_gate_0/docs/0030.md
+++ b/steins_gate_0/docs/0030.md
@@ -78,7 +78,7 @@
 “这个声音是……？”  
 用帘子隔开的吹雪的病床那里，传来了什么声音。真由理面色铁青，慌忙地拉开帘子。  
 “吹雪酱？”  
-“呜欸？”  
+“呜诶？”  
 仔细一看，发出奇妙的声音回应的吹雪，正在毫无形象地在床上盘着腿，用旁边的小型液晶电视看着电视剧。眼睛虽然哭得红肿，嘴里却叼着Pocky，看样子只是单纯地被电视剧感动了。  
 “啊咧……哦哦，大家又来啦！”  
 吹雪擦掉眼泪，用一如既往的笑容迎接我们。  
@@ -136,7 +136,7 @@
 哈……一样的。吹雪看到的梦境，和我在那条世界线的经历一样。今天傍晚的话，时间也刚好吻合。我从隔帘的缝隙观察病房内，确认了没有医院的工作人员在。  
 “抱歉，大家，能让我和中濑小姐两个人单独谈谈吗？”  
 枫：“哈哇？”  
-真由理：“唔欸？”  
+真由理：“唔诶？”  
 由季：“难道……！”  
 “不是那样啦……”  
 她们这样的反应，让我有些不好意思……  
@@ -146,7 +146,7 @@
 真由理顺从地点点头，走到隔帘外。其他两人一副困惑的表情，不过也跟着离开了。  
 “那个……”  
 “中濑小姐，你所说的梦，该不会地点是在冲绳吧？”  
-“欸？是的……吧。嗯，我想……大概就是冲绳。  
+“诶？是的……吧。嗯，我想……大概就是冲绳。  
 &emsp;&emsp; 坐在车上的时候，好像看到了那样的标牌。”  
 “车上的有，我和你，还有由季小姐，另外有司机和矮个子的男性自卫队员。”  
 “嗯。”  
