--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -12,7 +12,7 @@
 &emsp;&emsp; 和光市的办公室好像被什么人洗劫了。  
 &emsp;&emsp; 还有，真帆前辈住的宾馆也联系了过来，  
 &emsp;&emsp; 那边好像也有什么人入侵过了。”  
-“欸？你说什么？！”  
+“诶？你说什么？！”  
 听到的事实让比屋定十分震惊。  
 “虽然很快雷斯吉宁教授也会联系你，但我想能越早知道越好吧。”  
 “谢谢你，‘红莉栖’。  
@@ -20,7 +20,7 @@
 “也是呢。拜托了。那就这样。”  
 “红莉栖”挂断了电话。比屋定低着头咬着嘴唇，陷入了沉默。于是我转向桶子。  
 “担心的事情成为了现实啊……对方盯上的，肯定是红莉栖的笔记本电脑和硬盘。”  
-“欸？真的假的？”  
+“诶？真的假的？”  
 “……转移场所可能比较好。”  
 “但我觉得这里很安全啊？”  
 “不管怎么说都有股不好的预感，类似于直觉吧。”  
@@ -147,7 +147,7 @@
 “*Hum……* 也是呢……”  
 教授莫名开始沉思起来，让比屋定有点困惑。还以为是根本不用想的事，难道不对吗？  
 “我想让测试的事就这样继续下去，你觉得怎么样？”  
-“欸？！您认真的吗？”  
+“诶？！您认真的吗？”  
 “实际上你不是也看到了吗，  
 &emsp;&emsp; 和 *Rintaro* 说话时，*‘Kurisu’* 作出了前所未有的反应。  
 &emsp;&emsp; 今后，不止是他，我也打算找更多的测试员参与进来。”  
