--- a/steins_gate_0/docs/0037.md
+++ b/steins_gate_0/docs/0037.md
@@ -107,7 +107,7 @@
 &emsp;&emsp; 到时候，还想着要联系下 *Rintaro* 呢。  
 &emsp;&emsp; 我还在烦恼是否要带上 *Maho* 一起去的，  
 &emsp;&emsp; 这样子看起来还是算了吧~”  
-“欸！？又要去日本吗！？”  
+“诶！？又要去日本吗！？”  
 这件事真帆完全是第一次听说。通常雷斯吉宁教授的项目的相关信息，都会事前通过研究所的内网通知自己的。  
 “啊。”  
 “……”  
