--- a/steins_gate_0/docs/0038.md
+++ b/steins_gate_0/docs/0038.md
@@ -73,7 +73,7 @@
 “怎么了吗？”  
 “难道说在买东西？”  
 “嗯，和真由理一起。”  
-“欸~约会？”  
+“诶~约会？”  
 “sweet(笑)”  
 “都说过不要用这种说法了。”  
 “那么，你也改改你恋爱脑的习惯吧。”  
@@ -111,7 +111,7 @@
 购物篮里面，放着大量的心形或星形的POP纸。这些……与我老家店铺的氛围，致命地不合适的感觉……但是，这也是一开始就肯定会变成这样的——全部交给真由理的品味的话。之后可能会被老爸牢骚一番，但是不关我的事。拜托真由理的不是我，而是老爸。因此，我什么意见也没说就去结账了。因为是周六，收银台附近等待结账的客人堆得满了出来，会很费时间的样子，我就让真由理到别的楼层的动漫周边卖场去等了，那里会有真由理喜欢的《雷NET翔》的周边商品出售。真由理觉得很抱歉的样子，还是按照我说的去了。  
 
 结果，结账花了15分钟。同时我为表歉意许下的送礼物的约定也兑现了。  
-“欸嘿嘿~~”  
+“诶嘿嘿~~”  
 真由理一副高兴至极的样子注视着手上的钥匙圈。  
 
 ![](../pics/0038-5.png)
