--- a/steins_gate_0/docs/0039.md
+++ b/steins_gate_0/docs/0039.md
@@ -85,7 +85,7 @@
 “看你应该还是个学生吧……是哪个大学呢？和教授一样是脑科学相关的话——”  
 “不，我是——”  
 “他的话，9月开始就是维克托·孔多利亚大学的学生了。以后也是准备来我的研究室的。”  
-“欸？”  
+“诶？”  
 “嚯嚯，维克托·孔多利亚大学啊。真是让人惊讶。”  
 虽然想着用眼神去问雷斯吉宁教授这到底是怎么回事，但只得到了微笑作为答复。  
 这个人……还是老样子，像个孩子啊。  
@@ -124,7 +124,7 @@
 在意外的时间点出现了这个词啊……  
 我向教授简单说明了之前提到的“住院的朋友”的事，以及她被怀疑患有新型脑炎的事。  
 “难道那个朋友就是，*Nakase·Katsumi*（中濑克美）？”  
-“欸？啊啊，在圣诞派对上见过的。”  
+“诶？啊啊，在圣诞派对上见过的。”  
 “嗯嗯。实际上我之所以会对新型脑炎感兴趣，也是以那个派对为契机的。  
 &emsp;&emsp; 你和 *Katsumi* 那时候都倒下了吧？”  
 这么说来确实是的。虽然我在那个时候是跳到别的世界线去了。  
@@ -170,7 +170,7 @@
 “那么，*Rintaro*，这些事就到这。有件事我想确认下。”  
 雷斯吉宁教授把视线转向了我的后方。  
 “圣诞派对那会儿我就觉得，你的这些 *girl friend* 们都是些 *cute* 的大小姐呢。”  
-“欸？”  
+“诶？”  
 我转身看向那边。真由理、枫，还有由季都从沙发上站起来看着这边。她们注意到了雷斯吉宁教授的视线，轻轻地挥了挥手。  
 “果然，这里面的其中一位就是你的恋人吧？  
 &emsp;&emsp; *Yuki*（由季）？*Kaede*（枫）？*Mayuri*（真由理）？  
