--- a/steins_gate_0/docs/0041.md
+++ b/steins_gate_0/docs/0041.md
@@ -35,7 +35,7 @@
 桶子失落的样子实在让铃羽看不下去，于是她用手掌拍了拍他庞大的后背。  
 “别想这个了，快给妈妈发个邮件，问问她有没有空闲时间。  
 &emsp;&emsp; 如果有空的话，就约她去看电影。”  
-“欸——！？难度系数突然变得这么高！”  
+“诶——！？难度系数突然变得这么高！”  
 “管它高不高，赶快去邀请她。听好了，这可是命令哦。”  
 “命、命令什么的……”  
 “回答呢？”  
@@ -92,7 +92,7 @@
 &emsp;&emsp; 那家伙，在阻止我们到达 *Steins;Gate*。  
 &emsp;&emsp; 她不想把这个世界变成没有发生过。  
 &emsp;&emsp; 也就是说，不止是我，爸爸你也被盯上了……？”  
-“欸？我？”  
+“诶？我？”  
 “不过，我觉得你应该没有……生命危险。  
 &emsp;&emsp; 如果相信世界线的真理，你至少会活到2036年。  
 &emsp;&emsp; 但是，为了阻止到达 *Steins;Gate*，她也可能妨碍你的研究。”  
@@ -108,7 +108,7 @@
 “唔……”  
 铃羽为难地呻吟着。  
 “你要是早点和妈妈在一起就什么问题都没有了……”  
-“欸，结果还是绕回那个话题了吗！？”  
+“诶，结果还是绕回那个话题了吗！？”  
 “总之还是需要多加注意啊。”  
 桶子把绿色的乌帕钥匙链递给了铃羽。铃羽接过后一边注视着，一边试着用指尖触碰它。  
 “呐——铃羽，篝碳虽然和真由喜没有血缘关系，但是她的女儿吧？”  
@@ -218,7 +218,7 @@
 “起开！”  
 铃羽有点强硬地推搡着桶子的大块头。因为太重，桶子费了很大功夫才翻到一旁。  
 “跟你说过多少次了叫你减肥！”  
-“欸欸欸……”  
+“诶诶诶……”  
 这样下去要被她逃了。铃羽立刻起身，就要飞奔出去追篝。  
 “——铃羽，穿上这个！”  
 坐在地上还来不及起身的至，抓过一件T恤扔给全裸的铃羽。  
@@ -241,7 +241,7 @@
 “但是，她已经……完全是敌人了。”  
 桶子帮衣着凌乱的铃羽整理了T恤的下摆。  
 “现在的铃羽，就像是工口游戏里的痴女角色一样的造型哦。”  
-“欸？啊—”  
+“诶？啊—”  
 桶子突然提起不相干的话题，让铃羽懵住了。  
 <abbr title="os：这部分难道不值得一张CG吗 @5pb">
 确实，现在的铃羽像是穿着一件迷你连衣裙一样。T恤从肩膀滑了下来，差点露出胸部；下摆也卷了起来，几乎要被窥见隐秘部位了。  
@@ -255,7 +255,7 @@
 “被刀抵着的时候……虽然很小，但是我听到了——”  
 “什么？”  
 “她……大概……在哭。”  
-“……欸？”  
+“……诶？”  
 哭了……？  
 在那个头盔里面？  
 在和我激烈搏斗的同时也在哭泣着吗？  
