--- a/steins_gate_0/docs/0042.md
+++ b/steins_gate_0/docs/0042.md
@@ -72,7 +72,7 @@
 “哈哈哈。”  
 “……果然你们俩，比半年前感情更好了呢。”  
 “啊！前辈，对不起……”  
-“欸？为什么要道歉？”  
+“诶？为什么要道歉？”  
 “不……难得冈部和真帆前辈好久不见……我却一直讲个不停。  
 &emsp;&emsp; 就这样，之后的时间请你们二位慢慢享受……”  
 “我并不是这个意思啦。”  
