--- a/steins_gate_0/docs/0045.md
+++ b/steins_gate_0/docs/0045.md
@@ -15,7 +15,7 @@
 声音极度嘶哑，喉咙随着发声又传来一阵痛楚。于是我紧接着回想起真帆对自己下杀手的事情。为什么她会做这种事？比起愤怒，心中现在更多的是疑惑。  
 “哟，*Rintaro*，醒了啊？”  
 伴随着脚步声，昏暗的灯光下浮现出一个巨大的身影。我记得那个声音。  
-“欸……？雷斯吉宁……教授……？”  
+“诶……？雷斯吉宁……教授……？”  
 “感觉怎么样？要是口渴的话，我会让人准备水的。”  
 仔细一看，在场的并不只有雷斯吉宁教授一人。他的身后，数位身着黑色西装的男人一言不发地伫立，紧紧地盯着我。所有人都拿着手枪。他们那类似
 <abbr title = "Men In Black。参见电影黑衣人">
