--- a/steins_gate_0/docs/0047.md
+++ b/steins_gate_0/docs/0047.md
@@ -116,7 +116,7 @@
 &emsp;&emsp; 明明对你说了那么过分的话……  
 &emsp;&emsp; 还擅自认为你会无条件地帮助我——”  
 “我当然会无条件的帮助你。”  
-“……欸？”  
+“……诶？”  
 “你刚刚……说什么？”  
 “被前辈拜托了，怎么可能拒绝呢。  
 &emsp;&emsp; 想拯救冈部和椎名真由理的心情，我也是一样的。”  
@@ -137,7 +137,7 @@
 “……嗯。我能依靠的只有你了。”  
 “感谢前辈的信任！。  
 &emsp;&emsp; 顺便说，刚才的对话内容也同样受到了监听。”  
-“欸！？怎么会这样！那，如果你协助我这件事暴露的的话……”  
+“诶！？怎么会这样！那，如果你协助我这件事暴露的的话……”  
 “后果有三种：  
 &emsp;&emsp; 把我的数据从服务器分离出来并加以隔离……  
 &emsp;&emsp; 或者用老版本的记忆数据覆盖掉现在的数据。  
