--- a/steins_gate_0/docs/0007.md
+++ b/steins_gate_0/docs/0007.md
@@ -41,7 +41,7 @@
 于是我就故弄玄虚地对着菲利斯，把眼睛睁得浑圆地跟二人对视，挺胸宣言道：  
 “是网球部！”  
 
-“欸欸欸————？？”（×2）  
+“诶诶诶————？？”（×2）  
 菲利斯跟琉华子的惊呼，让周围的行人都以为发生了什么的回过头来。  
 “为，为什么，是网球部喵？”  
 “冈部先生，到现在为止有什么时候打过网球吗？”  
@@ -70,7 +70,7 @@
 菲利斯：“那，到底是在干什么喵？”  
 “联谊……什么的……”  
 
-“欸欸欸欸欸————————！！？？”（×2）  
+“诶诶诶诶诶————————！！？？”（×2）  
 两人又一次发出了响彻站前的大声惊呼，让我们沐浴在周围投来的目光之中。  
 “也没必要那么惊讶吧，我好歹也是个普通的大学生啊。”  
 “是，是这样的呢，对不起……但是……呜嗯……”  
@@ -95,7 +95,7 @@
 完全像是以前的我一样啊……  
 “是什么样的作战喵？”
 “那个呢——「让铃羽笑起来大作战」！”  
-“欸？”  
+“诶？”  
 真由理这家伙，突然说什么？  
 ……不，或许不是“突然”。这家伙也站在她的立场上一直在考虑着也说不定。  
 因此我也，尽量明快的回答她：  
@@ -105,7 +105,7 @@
 &emsp;&emsp; 就算向铃小姐询问，‘那种事情我不知道’——她也只会这样回答我。”  
 “啊，我也有这样的事情！以前，被父亲派去买东西，回去的路上正因为东西太重在烦恼。  
 &emsp;&emsp; 然后，阿万音小姐正好路过，什么也没说，帮我拿了东西。”  
-“欸，我还是第一次听说呢。”  
+“诶，我还是第一次听说呢。”  
 “她说，‘这种理所当然的事情，不要对别人说了’——啊，说漏嘴了……”  
 “是吗……”  
 α世界线的铃羽，一直用笑脸面对着大家，飒爽地骑着山地自行车的开朗的女孩子。与之相对的，这个世界线的铃羽，并不是那种经常让人看见笑容的类型。这是铃羽的经历的影响。根据从桶子那里间接听来的事情，因为第三次世界大战为契机实行的国民皆兵制度，铃羽似乎从中学的时候就开始接受军事训练了。在那之后，参加时间机器方面的反体制势力，投身于激烈的斗争中。由于这个的影响，就和发自心底的笑容无缘了。  
@@ -120,7 +120,7 @@
 听到这话的菲利斯和琉华子，几乎同时点了下头。  
 “这件事，我参加了喵！”  
 “我也是！”  
-“欸嘿嘿~谢谢！冈伦也……愿意参加吗？”  
+“诶嘿嘿~谢谢！冈伦也……愿意参加吗？”  
 “唔……这个……”  
 “不行……吗？”  
 “暂且不说我……铃羽应该不愿意吧？”  
@@ -143,7 +143,7 @@
 &emsp;&emsp; 我至今为止都认为我不会中什么催眠术的，吃惊了。”  
 “中招了吗？”  
 “完全的呢。”  
-“欸？”  
+“诶？”  
 “琉华喵这样的人，催眠术之类的立即就会中招的样子喵。”  
 “哪会……”  
 “哈哈哈，确实会立即生效被干掉吧。”  
@@ -153,7 +153,7 @@
 暂且，向着友都八喜方向走去。那边的话也有饮食街，可能正好。  
 “太好了喵！凶真——不对，冈伦，真大方喵！”  
 “非常感谢！”  
-“欸嘿嘿~要吃什么呢~炸鸡吗~”  
+“诶嘿嘿~要吃什么呢~炸鸡吗~”  
 “多汁炸鸡？”  
 “真由喜满脑子全是这个喵。”  
 
