--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -60,7 +60,7 @@
 “怎么啦？”  
 “没事……”  
 “别瞒着我。你的‘没事’准是‘有话要讲’的意思。”  
-“欸？”  
+“诶？”  
 “来，说来听听。”  
 父亲的语气极为正经。铃羽惊讶地瞪大了眼睛，可马上就转过神来。  
 “你刚刚的台词……是你以前玩过的galgame里面的吧？”  
@@ -97,7 +97,7 @@
 意识到是父亲的铃羽连忙松开手，惊魂未定地抱怨着。而桶子好像也一下子被吓得够呛，结巴着解释道：  
 “这，这是…刚，刚才的报复哦”  
 “我刚才在发呆，差一点就把你杀掉了啊。”  
-“欸欸欸——？”  
+“诶诶诶——？”  
 “因为我接受的相关训练，可开不起这种玩笑啊。”  
 “知，知道了。真心很疼的说。”  
 “真是的……”  
@@ -136,7 +136,7 @@
 “嘿……嘿嘿……”  
 桶子明显很紧张。据铃羽所知，父亲只有在面对阿万音由季时才会表现出这种态度。桶子和真由理就像是亲人一样；与在LAB附近打工的留未姐——铃羽是用真实的名字来称呼菲利斯的——也能亲密的接触。绝对不是因为不擅长应对女性。然而不知道为何，只有在阿万音由季的面前不能正常表现。铃羽把未来她会成为桶子的妻子并生下自己这件事情告诉了他本人——这可能是一个错误的决定，事到如今铃羽才这么觉得。  
 “那个，你**妹妹**今天不在吗？”  
-“欸……啊？妹妹？哦，对……”  
+“诶……啊？妹妹？哦，对……”  
 “是这样啊……”  
 桥田至的妹妹——并无他人，就是指铃羽。在铃羽刚开始在LAB定居的时候，由季已经和真由理、桶子有来往了，到这里来的机会也增加了。这样的话，就很难不碰面……迫不得已，铃羽才说自己是桶子的妹妹——桥田铃羽。虽说如此，为了不露馅还是尽量不碰面会比较安全。所以铃羽现在才像这样悄悄隐蔽起来。  
 “啊，对了对了，这件衣服怎么样？之前才买的。”  
