--- a/steins_gate_0/docs/0051.md
+++ b/steins_gate_0/docs/0051.md
@@ -89,7 +89,7 @@
 “不，今天还有事，去不了啊。”  
 “我打完工还打算去LAB一趟哟~”
 “我知道了……如果我有时间，怎么呢就在那汇合，一起回去吧。”  
-“真的~~？今天很稀奇呢！欸嘿嘿~”  
+“真的~~？今天很稀奇呢！诶嘿嘿~”  
 “那，打工加油啊。”  
 语毕，我挂断了电话。  
 真由理平安无事。也就是说，刚刚的世界线变动与真由理无关吗？虽说不能疏忽大意……或者刚刚的只是单纯的眼花啊白日梦之类的，根本就不是什么世界线变动？如果真是这样，我反倒觉得现实过头了。  
