姓名修正 “菲利斯”-->“菲莉丝”

--- a/steins_gate_0/docs/0007.md
+++ b/steins_gate_0/docs/0007.md
@@ -6,29 +6,29 @@
 
 “呜喵~凶真~”  
 “冈部先生~真由理酱~”  
-已经汇合在等着我们的菲利斯跟琉华子，见到我们以后马上跑了过来。  
+已经汇合在等着我们的菲莉丝跟琉华子，见到我们以后马上跑了过来。  
 “真想见你啊喵~！”  
-毫不犹豫地抱紧我的，是菲利斯·喵喵。虽然我知道这是所谓的“女仆小姐”模式用名，本名秋叶留未穗的她本人却一直强调说私下里也要叫她菲利斯。明明实际身份是堪称秋叶原地主的秋叶家的大小姐，却在自家的女仆咖啡厅 *MayQueen+Nyan²* 开心地作为金牌女仆工作着。今天身上也是和以前一样，穿着店里的女仆装。*MayQueen* 里到时候是不是也会换上圣诞服装呢？  
+毫不犹豫地抱紧我的，是菲莉丝·喵喵。虽然我知道这是所谓的“女仆小姐”模式用名，本名秋叶留未穗的她本人却一直强调说私下里也要叫她菲莉丝。明明实际身份是堪称秋叶原地主的秋叶家的大小姐，却在自家的女仆咖啡厅 *MayQueen+Nyan²* 开心地作为金牌女仆工作着。今天身上也是和以前一样，穿着店里的女仆装。*MayQueen* 里到时候是不是也会换上圣诞服装呢？  
 “别，别这样啦……大家都看着呢。”  
-想把菲利斯从身上支开，但是却很难做到。干脆把头上的那个猫耳抢过来算了。  
-“有什么不好的喵！毕竟是凶真和菲利斯的关系喵~”  
+想把菲莉丝从身上支开，但是却很难做到。干脆把头上的那个猫耳抢过来算了。  
+“有什么不好的喵！毕竟是凶真和菲莉丝的关系喵~”  
 “才不好呢。还有啊，凶真什么的别那么叫了。”  
 “为什喵？”  
 “因为那个名字是黑历史。”  
 “呜喵……（失落）”  
-菲利斯看起来很不满的样子，还是当没看见好了。  
+菲莉丝看起来很不满的样子，还是当没看见好了。  
 对我来说，“凤凰院凶真”已经是被封印掉的存在，当作已经消失掉的存在。“他”制造出了时间机器这种禁断的发明，因为这个原因被掌握世界的系统所惩罚。践踏了许多人的回忆，失去了重要的人，而“他”自己也收到了巨大的心理创伤而收场。不能让“他”再次苏醒。对我来说，已经不需要了。  
 “那，应该怎么叫比较好喵？”  
 “那当然是，冈部什么的……”  
-“果然啊，还是叫冈伦这样的，更加可爱点是不是更好呀？是吧，菲利斯酱！”  
+“果然啊，还是叫冈伦这样的，更加可爱点是不是更好呀？是吧，菲莉丝酱！”  
 “嗯，真由喜这么说的话，以后就这么叫好了喵……虽然哪里还是有点违和感。”  
-一边摆着还没完全接受的样子，菲利斯总算是从我这里抽开了身子。  
+一边摆着还没完全接受的样子，菲莉丝总算是从我这里抽开了身子。  
 
 “琉华子也是，好久不见了啊。”  
 “是啊……”  
 琉华子很开心的微笑着。还是跟以前一样，像个女孩子一样的可爱啊……  
 但是，是男的。  
-他是真由理的同级生，经常能够看见他在自家柳林神社那儿帮忙的样子。实际上，“琉华子”这么叫本身就不太对来着。就像我跟菲利斯说不要叫我“凶真”那样，他也是有“漆原琉华”这么个名字的。但是，到了现在让我去叫琉华子“琉华”这样……那啥，还是……有点难为情。  
+他是真由理的同级生，经常能够看见他在自家柳林神社那儿帮忙的样子。实际上，“琉华子”这么叫本身就不太对来着。就像我跟菲莉丝说不要叫我“凶真”那样，他也是有“漆原琉华”这么个名字的。但是，到了现在让我去叫琉华子“琉华”这样……那啥，还是……有点难为情。  
 “总觉得，挺让人怀念的感觉啊。  
 &emsp;&emsp; 我时常还是会去LAB那露个面，但是冈部先生，最近好像都没怎么过来呢。”  
 “啊，啊啊……大学那研讨课很忙啊，还要做好ATF的准备什么的。”  
@@ -38,11 +38,11 @@
 “加入了社团吗？”  
 “什么样的社团喵？果然是UFO还是UMA之类的？”  
 把我想成什么了……说起来，除了跟真由理，好像是没说过来着。  
-于是我就故弄玄虚地对着菲利斯，把眼睛睁得浑圆地跟二人对视，挺胸宣言道：  
+于是我就故弄玄虚地对着菲莉丝，把眼睛睁得浑圆地跟二人对视，挺胸宣言道：  
 “是网球部！”  
 
 “诶诶诶————？？”（×2）  
-菲利斯跟琉华子的惊呼，让周围的行人都以为发生了什么的回过头来。  
+菲莉丝跟琉华子的惊呼，让周围的行人都以为发生了什么的回过头来。  
 “为，为什么，是网球部喵？”  
 “冈部先生，到现在为止有什么时候打过网球吗？”  
 “肯定是初学者啊。”  
@@ -54,20 +54,20 @@
 &emsp;&emsp; 于是，没想到我居然有着网球这方面的才能啊！  
 &emsp;&emsp; 明明是个初学者，但是却把那群社团成员给连战连胜了。  
 &emsp;&emsp; 怎么样，是不是很厉害啊？”  
-菲利斯：“哈啊……”  
+菲莉丝：“哈啊……”  
 琉华子：“冈部先生，果然是很厉害的！”  
 “哈哈哈，既然是这样的话，向着职业网球运动员的目标去也未尝不可啊！”  
 真由理：“目标！温布尔顿！是吧~”  
-菲利斯：“……”  
-“嗯？怎么了吗菲利斯？头疼吗？”  
-菲利斯：“该从哪里开始吐槽呢……不管怎么看，这都是社团为了拉新人而设计的陷阱啊喵……”  
+菲莉丝：“……”  
+“嗯？怎么了吗菲莉丝？头疼吗？”  
+菲莉丝：“该从哪里开始吐槽呢……不管怎么看，这都是社团为了拉新人而设计的陷阱啊喵……”  
 “别，别直接说出来啊……  
 &emsp;&emsp; 我好歹，虽然也有想过是不是有什么小九九——。  
 &emsp;&emsp; 但也装作不去想的样子啊。大家都是好人啊。”  
 琉华子：“那，社团的练习会很忙的吧……”  
 “啊，没……练习基本上是没怎么去的……”  
 琉华子：“啊？”  
-菲利斯：“那，到底是在干什么喵？”  
+菲莉丝：“那，到底是在干什么喵？”  
 “联谊……什么的……”  
 
 “诶诶诶诶诶————————！！？？”（×2）  
@@ -75,16 +75,16 @@
 “也没必要那么惊讶吧，我好歹也是个普通的大学生啊。”  
 “是，是这样的呢，对不起……但是……呜嗯……”  
 琉华子扭扭捏捏的在那想要说点什么。  
-“明明都已经有菲利斯了喵，却还跟其他的女孩子一起愉快的搞联谊……不可原谅喵！”  
+“明明都已经有菲莉丝了喵，却还跟其他的女孩子一起愉快的搞联谊……不可原谅喵！”  
 “别搞错了啊，我对女孩子什么的并不……”  
 实际上，虽然我也算成员之一，但那里并不是什么像我这种的临时现充能够待的地方。说到底，跟那群真现充根本不可能说得上话。在一群衣着光鲜的男女面前就只有我是一副不明所以的样子，这才是事实真相。对我来说实在是一种鲁莽的挑战……  
-这件事也是，还是不要跟菲利斯他们说算了。  
+这件事也是，还是不要跟菲莉丝他们说算了。  
 “真好啊——真由喜也想跟冈伦联谊呢~”  
 啥？真由理！？是应该有这方面兴趣的年龄吗！？  
 “因为啊，是大家一起在快快乐乐的派对不是吗~？”  
 ……好像哪里不对。  
 “呜喵……虽然应该是没错就是了，但是果然还是觉得哪里有些微妙的不同喵……”  
-“在LAB怎么样啊？琉华君和菲利斯酱当然都要来。还有桶子君，绹酱和铃小姐也——啊！”  
+“在LAB怎么样啊？琉华君和菲莉丝酱当然都要来。还有桶子君，绹酱和铃小姐也——啊！”  
 真由理一脸做错事似的表情看着我。  
 
 铃羽……么。  
@@ -117,7 +117,7 @@
 同步了！  
 “不是马上就要圣诞节了吗？铃小姐呢，说从来没有去过圣诞晚会。  
 &emsp;&emsp; 所以真由喜想把这个当作礼物送给铃小姐。”  
-听到这话的菲利斯和琉华子，几乎同时点了下头。  
+听到这话的菲莉丝和琉华子，几乎同时点了下头。  
 “这件事，我参加了喵！”  
 “我也是！”  
 “诶嘿嘿~谢谢！冈伦也……愿意参加吗？”  
@@ -138,7 +138,7 @@
 “那…那个，话说，冈部先生。”  
 正好谈话告一段落，琉华子怯生生地问道。  
 “……诊察，怎么样了？”  
-琉华子大概是从真由理那里听说了心理咨询的事情。今天特意通过真由理想要见面，也许是在意诊察的结果吧。琉华子和菲利斯，也让她们担心了呢。在这个世界线，两人虽然不是LABMem，但作为无可替代的伙伴这一点并没有不同。  
+琉华子大概是从真由理那里听说了心理咨询的事情。今天特意通过真由理想要见面，也许是在意诊察的结果吧。琉华子和菲莉丝，也让她们担心了呢。在这个世界线，两人虽然不是LABMem，但作为无可替代的伙伴这一点并没有不同。  
 “催眠疗法这样的虽然是初体验，真是相当有趣啊。  
 &emsp;&emsp; 我至今为止都认为我不会中什么催眠术的，吃惊了。”  
 “中招了吗？”  
