--- a/steins_gate_0/docs/0009.md
+++ b/steins_gate_0/docs/0009.md
@@ -36,7 +36,7 @@
 
 “凶真——不对，冈伦，怎么了喵？”  
 “啊……嗯！我现在就过去！”  
-我一边慌忙地追上菲利斯他们，一边紧咬着牙关。  
+我一边慌忙地追上菲莉丝他们，一边紧咬着牙关。  
 
 确实，如同雷斯吉宁教授说的那样，这个测试对我来说可能是残酷的。  
 即使如此，我的脑中已经忍不住开始考虑——  
