--- a/steins_gate_0/docs/0015.md
+++ b/steins_gate_0/docs/0015.md
@@ -69,7 +69,7 @@
 也就是说阿万音由季属于后者吧。  
 “被讨厌的话就轻松多了……”  
 “干脆就把事实说明了什么的——不可能吧……”  
-现在为止，知道铃羽是时间旅行者的人只有极少数。桶子、真由理，还有菲利斯，就这些。  
+现在为止，知道铃羽是时间旅行者的人只有极少数。桶子、真由理，还有菲莉丝，就这些。  
 “话说啊，就这样什么都不说明不是挺好的吗？”  
 桶子却给出了出乎意料的意见。  
 “阿万音氏，怎么说呢，我认为不是那种对秘密什么的非要刨根问底的人。  
@@ -115,10 +115,10 @@
 &emsp;&emsp; 这样的恐惧无论睡着还是醒着都伴随左右。  
 &emsp;&emsp; 为了忘却恐惧，除了委身于疯狂，让自己成为杀人方，别无他法。”  
 那就是所谓的战争，也是对铃羽来说曾经的日常生活。经历过数条噩梦般的世界线的我也不曾体验过那样的世界。  
-“父亲他们因为时间机器的事被归为反政府组织。”  
+“爸爸他们因为时间机器的事被归为反政府组织。”  
 铃羽回来所乘坐的时间机器是由桶子开发的，其性能相比α世界线的更是高出许多。  
 真不知道这边未来的他是怎么办到的。  
-“我也因为脱离军队加入父亲他们而被警察和治安部队所追捕。  
+“我也因为脱离军队加入爸爸他们而被警察和治安部队所追捕。  
 &emsp;&emsp; 之后，更加惨烈的战斗发生了好几次。  
 &emsp;&emsp; 我不想说什么‘为了正义而战’之类的漂亮话。  
 &emsp;&emsp; 我杀了很多人，朋友和同伴也有很多被杀掉了。  
