--- a/steins_gate_0/docs/0023.md
+++ b/steins_gate_0/docs/0023.md
@@ -3,7 +3,7 @@
 > [ 2010/12/21 ] MayQueen，冈伦和桶子讨论关于篝和红莉栖笔记本和移动硬盘的问题。  
 
 “欢迎回来喵，主人~”  
-一进入女仆咖啡店 *MayQueen+Nyan²* ，就听到了工作中的猫耳女仆们朝气蓬勃的欢迎。因为是工作日的傍晚，即使是这样的高人气店，也能看到空位。也因此菲利斯有空亲自来接待我。  
+一进入女仆咖啡店 *MayQueen+Nyan²* ，就听到了工作中的猫耳女仆们朝气蓬勃的欢迎。因为是工作日的傍晚，即使是这样的高人气店，也能看到空位。也因此菲莉丝有空亲自来接待我。  
 “欢迎回来喵~凶真——不对，冈伦~”  
 “啊。那个，今天，真由理呢？”  
 “真由喜的话，马上就来了喵。还有大概30分钟。”  
@@ -22,25 +22,25 @@
 “不，没必要这么惊讶吧？”  
 “而且从身高来看，是小学生还是中学生！？”  
 “不是！”  
-“难以置信！明明已经有菲利斯了，还去找新的情人！新的萝莉情人什么的喵！”  
+“难以置信！明明已经有菲莉丝了，还去找新的情人！新的萝莉情人什么的喵！”  
 “不是啦！她是为了研究从美国的大学——”  
 “这已经必须在圆桌会议上谴责了喵！”  
 “听人说话啊……”  
 “那个，你们在说什么啊……？”  
-终于踏入店内的比屋定，用怀疑的眼神看着我和菲利斯。  
+终于踏入店内的比屋定，用怀疑的眼神看着我和菲莉丝。  
 因为之前的事故——现在正被当成案件处理，今天我们又被叫去警察局了。  
 结束后，意识到两个人都没吃午饭，我就把她带过来了。  
-菲利斯把迅速把背挺直，站在比屋定面前，恭恭敬敬地行礼，接着笑着摆出猫一般的姿势。  
+菲莉丝把迅速把背挺直，站在比屋定面前，恭恭敬敬地行礼，接着笑着摆出猫一般的姿势。  
 “欢迎回来，大小姐~”  
 “……？”  
 “在本店，不说‘欢迎光临’，而是说‘欢迎回来’的喵~”  
 “啊啊，是这样呢。”  
-“菲利斯·喵喵哟~问大小姐芳名？”  
+“菲莉丝·喵喵哟~问大小姐芳名？”  
 “比屋定真帆哟。”  
 “比屋定……这样来说，冲绳那边的大小姐喵？”  
 “啊啦，居然知道？老是被别人问来问去，经常搞错什么的。  
 &emsp;&emsp; 你居然连冲绳那边的名字都知道。”  
-“当然喵！菲利斯可是在三世以前的前世，琉球王国那边南波照间的守护精灵喵！”  
+“当然喵！菲莉丝可是在三世以前的前世，琉球王国那边南波照间的守护精灵喵！”  
 “啊？”  
 “对，那时候，我们精灵的声音通过祝女向人们传达着，将王国向正确的形态引导着。  
 &emsp;&emsp; 然而，暴乱的海神们进攻到了南波照间，最终我们还是……呜呜呜……”  
@@ -55,7 +55,7 @@
 “还真是很大的人呢……”  
 “等会我会介绍的。还请你说说他让他减肥。”  
 “——那么，真帆喵，我来给你带路喵~”  
-确认别的女仆将桌子擦干净了以后，菲利斯适时地接待起比屋定。  
+确认别的女仆将桌子擦干净了以后，菲莉丝适时地接待起比屋定。  
 “真帆喵，很可爱喵~”  
 “可以的话，能不能正常的称呼……”  
 “这就是正常的啊喵。来吧，请这边来，真帆喵~”  
@@ -63,12 +63,12 @@
 
 我走过去在桶子对面坐下，向附近的女仆小姐点了杯咖啡。  
 “真是看错你了冈伦。现充爆炸吧！”  
-“别和菲利斯说一样的话啊……搞错了啦。”  
+“别和菲莉丝说一样的话啊……搞错了啦。”  
 “哪里搞错了？居然和那种合法萝莉一起……  
 &emsp;&emsp; 而且啊，明明那么可爱却又有种一点都不优雅的遗憾感让人欲罢不能啊！  
 &emsp;&emsp; 区区冈伦竟敢如此嚣张。唔呼！”  
 “那种话千万别对本人说，生气了很恐怖的。”  
-看向比屋定那边，正一副被菲利斯的中二系谈话弄得云里雾里的样子，和菜单对峙着。  
+看向比屋定那边，正一副被菲莉丝的中二系谈话弄得云里雾里的样子，和菜单对峙着。  
 “以前电话里不是说过嘛。被袭击那时候在一起的，雷斯吉宁教授的助手——”  
 “那种事怎么都好！重点在于，冈伦把我放一边，自己跑去和可爱的女孩纸一起玩的事！”  
 “你也去不就好了？约会什么的。”  
@@ -94,7 +94,7 @@
 “确实。进入正题吧。”  
 “嗯。实际上，有两件事——”  
 桶子在这里中断了话语，四下张望了起来。  
-店内的客人还比较少，而且多亏菲利斯的安排，近处的座位都没有人。只要不发出特别大的声音的话，基本是不用担心被偷听的——啊，一不小心又冒出了以前中二病时期坏习惯。大概是因为之前被卷入如同好莱坞电影一样的非日常事件当中的原因吧。  
+店内的客人还比较少，而且多亏菲莉丝的安排，近处的座位都没有人。只要不发出特别大的声音的话，基本是不用担心被偷听的——啊，一不小心又冒出了以前中二病时期坏习惯。大概是因为之前被卷入如同好莱坞电影一样的非日常事件当中的原因吧。  
 “首先第一项，希望你能对真由喜保密……其实有个需要找到的人。”  
 “对真由理保密？”  
 “嗯。”  
@@ -109,7 +109,7 @@
 “在我知道的范围里面……没有。”  
 “那，先把名字放在一边，和真由喜关系特别好的女性朋友都有哪些呢？”  
 “嗯，这样的话……应该是有一个从小学到中学一直都在一起玩的社团里的人来着——”  
-把那个名字告诉了桶子。高中以后的，就不用再特意说了，我知道的桶子应该也是清楚的。关系特别好的，就是Cosplay社团的吹雪、枫还有由季，还有就是，和菲利斯一起的 *MayQueen+Nyan²* 的女孩子们。再有的话，虽然不是女孩子，但是琉华应该也能算是关系比较亲密的朋友了吧。  
+把那个名字告诉了桶子。高中以后的，就不用再特意说了，我知道的桶子应该也是清楚的。关系特别好的，就是Cosplay社团的吹雪、枫还有由季，还有就是，和菲莉丝一起的 *MayQueen+Nyan²* 的女孩子们。再有的话，虽然不是女孩子，但是琉华应该也能算是关系比较亲密的朋友了吧。  
 “——我能够回答出来的就是这种程度了。和你知道的内容是差不多的。抱歉啊。”  
 “不，就算是这样也很充分了。帮大忙了。”  
 桶子拿出手机，把我说出来的名字都记到备忘录里。  
@@ -157,7 +157,7 @@ nüer……nǚér……女儿？
 能找的到的话，还是想去找找看。就算是养女，也是对未来的真由理来说很重要的女儿。而且，我对铃羽也有一些歉意在，做得到的话还是想尽量去帮忙。  
 
 正好这个时候，女仆小姐把咖啡拿过来了。  
-喝着咖啡，往比屋定那边看的时候，菲利斯依旧陪在她旁边。  
+喝着咖啡，往比屋定那边看的时候，菲莉丝依旧陪在她旁边。  
 “那么接下来就是~让煎饼变得更加美味的魔法环节喵~”  
 “魔，魔法？”  
 “撒，真帆喵也请一起来~‘世界完蛋喵，阴谋喵~’”  
