--- a/steins_gate_0/docs/0027.md
+++ b/steins_gate_0/docs/0027.md
@@ -2,7 +2,7 @@
 > 1.129848  
 > [ 2010/12/24 ] 圣诞派对（下）交换礼物，星之奏名字引发跳线。  
 
-开始吃饭后过了大概一个小时。期间我也找机会联络了“红莉栖”，虽然一开始还是用无语的表情说着“比起我这边你更应该好好陪着真帆前辈！”但是听到我祝她圣诞快乐之后，表情明显变得惊喜且羞涩，丢下一句“圣……圣诞快乐！这下满意了吧？”而后匆忙挂断了电话。在大家的食欲都已得到满足以后，菲利斯慢慢地拍手示意大家看向她。  
+开始吃饭后过了大概一个小时。期间我也找机会联络了“红莉栖”，虽然一开始还是用无语的表情说着“比起我这边你更应该好好陪着真帆前辈！”但是听到我祝她圣诞快乐之后，表情明显变得惊喜且羞涩，丢下一句“圣……圣诞快乐！这下满意了吧？”而后匆忙挂断了电话。在大家的食欲都已得到满足以后，菲莉丝慢慢地拍手示意大家看向她。  
 “那么那么，大家喵~正好热闹的时候，我觉得差不多是时候开始交换礼物了喵~”  
 “我们，没有准备什么很合适的礼物……”  
 比屋定和教授从和光市到这里来的途中，在堂吉诃德那花了大概10分钟左右选了礼物。  
@@ -15,11 +15,11 @@
 “也可以Da☆Ze~”  
 模仿着桶子的口癖，真由理从手提包里拿出两个包裹放在桌子上。桶子手里拿着的礼物也是同样的包装，应该是在同一家店一起买的吧。关于这方面，我事先从真由理那里听到，这是“作战的第二阶段”。今天晚上除了要让铃羽展开笑颜之外，还要让桶子跟由季的关系也有所进展，真由理是这么计划的。  
 “交换礼物的方法的话，想了很多，最后还是用抽签的喵！”  
-菲利斯将所有人的礼物集中到了一起，然后把它们都贴上了带编号的小标签。  
+菲莉丝将所有人的礼物集中到了一起，然后把它们都贴上了带编号的小标签。  
 “喵~喵喵~~♪”  
 一捆一次性筷子随着声音被高举起来。  
 “这个是~真由喜在今晚准备用来国王游戏的东西喵！”  
-“哇！不要说出来啊，菲利斯酱！”  
+“哇！不要说出来啊，菲莉丝酱！”  
 “喂，真由理……国王游戏那种东西，是联谊的时候才玩的啊……”  
 “我知道的啦~只是稍微搞错了而已……”  
 “嘛，被女孩子命令什么的，我这边是最喜欢的了！”  
@@ -27,12 +27,12 @@
 除了吹雪棒读一般的吐槽，其他人自动过滤了桶子的变态发言。  
 “于是，被真由喜稍微搞错了的这些一次性筷子，就决定拿来抽签用了喵！  
 &emsp;&emsp; 抽中哪个编号，就可以拿到对应的礼物喵！”  
-菲利斯将筷子弄混之后，分别走到每个人那里让大家抽签。  
-真由理的作战，菲利斯也参与其中。事实上，真由理跟菲利斯之间明显在用眼神和小动作在互相传递着信息。在大家还被蒙在鼓里地进行着抽签的时候，由季和桶子的礼物已经被单独拿了出来进行了标签交换的工作。搞得那么明显，我都担心会不会被由季发现。  
+菲莉丝将筷子弄混之后，分别走到每个人那里让大家抽签。  
+真由理的作战，菲莉丝也参与其中。事实上，真由理跟菲莉丝之间明显在用眼神和小动作在互相传递着信息。在大家还被蒙在鼓里地进行着抽签的时候，由季和桶子的礼物已经被单独拿了出来进行了标签交换的工作。搞得那么明显，我都担心会不会被由季发现。  
 “大家都抽好签了喵？那么就开始分发礼物了喵~要大家都拿到了礼物才可以打开喵！”  
 琉华子：“好激动啊~”  
 绹：“会抽到什么呢？”  
-菲利斯和真由理按照编号把礼物分给大家。所有人都拿到了以后，一起开始拆起了包装。  
+菲莉丝和真由理按照编号把礼物分给大家。所有人都拿到了以后，一起开始拆起了包装。  
 “噫？！”  
 第一个发出奇怪声音的是绹，盒子里突然就蹦出了个骷髅头。  
 “啊！这个很酷吧？是皮带扣哟，绹酱。戴着去学校的话我觉得一定能很受欢迎的！”  
@@ -90,7 +90,7 @@
 但是琉华子是男的！  
 的确是女孩子收到了会开心的东西呢。在这个女生比例高的派对，选这种类型算是很有品位了。不如说，我就应该选这种东西的才对……虽然这么想，不过最初的我就完全没有考虑过把八音盒当作礼物呢……  
 “这个，到底是谁的礼物喵？”  
-菲利斯……语气太刻意了吧……  
+菲莉丝……语气太刻意了吧……  
 “啊，那个……是我……”  
 桶子羞怯地举起了手。  
 由季：“诶？！”  
@@ -98,7 +98,7 @@
 枫：“啊啦呐~！”  
 绹：“桶子叔叔，真了不起呢！”  
 铃羽：“嗯~？挺能干的嘛，哥哥。”  
-除了事前就知道里面东西的菲利斯和真由理以外，所有人都发出了惊讶的声音。  
+除了事前就知道里面东西的菲莉丝和真由理以外，所有人都发出了惊讶的声音。  
 “这是，桥田先生的呢。”  
 “怎，怎么样啊？虽然是我听了真由喜的建议选的……”  
 “好棒……多谢了！我会很爱惜的！”  
@@ -106,8 +106,8 @@
 “啊……？”  
 忽然，由季一副不可思议的表情看着礼物盒底，然后开始坐立不安起来。  
 “那个，不好意思，我，稍微离开下……”  
-由季从座位上站起来，抱着礼物盒慌慌张张地进了洗手间。看来是发现了暗藏其中的“特殊设计”了吧。根据之前真由理的情报，那里贴有桶子亲笔写的——真由理伪造的——信，内容是电影约会的邀请，也就是所谓的情书一样的东西。不知道现在的由季究竟是什么样的反应呢？再看另一位当事人桶子，打开了自己收到的礼物查看了内容，也露出了困惑的表情。他抽到的礼物是菲利斯的，这让他打开之前一直处于兴奋不已的状态，不过现在已经完全静止了。同样根据真由理的情报，应该是两张电影票。“用于和由季约会”，貌似这样的指令书也一同放在了里面。感受到桶子疑问的视线，菲利斯回了一个单眨眼，似乎是在说“加油喵”……  
-菲利斯抽到了真帆今天在堂吉诃德买的古怪的玩偶；琉华子抽到了雷斯吉宁教授也是从堂吉诃德买的小型遥控直升机；教授则收到了綯准备的可爱的12色蜡笔套装；然后铃羽得到了似乎是由季亲手织的手套，还特地戴上给我们看，并露出了开心——却含着一些寂寞——的微笑。  
+由季从座位上站起来，抱着礼物盒慌慌张张地进了洗手间。看来是发现了暗藏其中的“特殊设计”了吧。根据之前真由理的情报，那里贴有桶子亲笔写的——真由理伪造的——信，内容是电影约会的邀请，也就是所谓的情书一样的东西。不知道现在的由季究竟是什么样的反应呢？再看另一位当事人桶子，打开了自己收到的礼物查看了内容，也露出了困惑的表情。他抽到的礼物是菲莉丝的，这让他打开之前一直处于兴奋不已的状态，不过现在已经完全静止了。同样根据真由理的情报，应该是两张电影票。“用于和由季约会”，貌似这样的指令书也一同放在了里面。感受到桶子疑问的视线，菲莉丝回了一个单眨眼，似乎是在说“加油喵”……  
+菲莉丝抽到了真帆今天在堂吉诃德买的古怪的玩偶；琉华子抽到了雷斯吉宁教授也是从堂吉诃德买的小型遥控直升机；教授则收到了綯准备的可爱的12色蜡笔套装；然后铃羽得到了似乎是由季亲手织的手套，还特地戴上给我们看，并露出了开心——却含着一些寂寞——的微笑。  
 “铃羽，真好呢。”  
 “嗯……话说，哥哥你抽中了什么？”  
 “这个……”  
@@ -154,7 +154,7 @@
 我因为那仿佛贯穿身体的强烈“违和感”，忍不住发出痛苦的呻吟。  
 周围的事物摇摆不定——眼前幸福聚会的风景，宛如海市蜃楼一样摇曳起来。  
 这，这是！？难道……怎么会？！  
-好像远处，一声巨大的响声响起。无法聚焦的眼睛勉强地转向那个方向，看见吹雪撞翻了桌子倒在地上。枫和菲利斯惊慌地叫着吹雪的名字，迅速跑了过去。  
+好像远处，一声巨大的响声响起。无法聚焦的眼睛勉强地转向那个方向，看见吹雪撞翻了桌子倒在地上。枫和菲莉丝惊慌地叫着吹雪的名字，迅速跑了过去。  
 然而，这画面宛如看着水中的场景，摇摇晃晃模糊不清，而且影像也逐渐变得慢镜头一般。声音也渐渐离我远去。不管怎么伸手也碰不到任何人，任何东西。时间和空间变得支离破碎，连一切物质的“自我”主体性都渐渐崩坏。就是这种令人不快的感觉。  
 这——这个感觉是——！  
 我知道的，也一直不愿记起的，已经体验到厌烦的可怕现象。  
