--- a/steins_gate_0/docs/0029.md
+++ b/steins_gate_0/docs/0029.md
@@ -124,7 +124,7 @@
 “不，不是那样的。做白日梦的人都有一个特征，他们的回答都是这样的——普金总统。  
 &emsp;&emsp; 而且戈里巴乔夫和列利钦这两位，也被称呼为总统。  
 &emsp;&emsp; 为此，研究员在暗地里称这个现象为‘总统病’……真是没品的名字。”  
-难，难道说……这些症状是，*Reading·Steiner* 吗……看来除我之外，其他人也拥有的可能性很高，能力的程度上可能有所差别。虽然无法确定，但是α世界线的菲利斯的言行，隐隐约约让我感觉到，她也拥有那个能力。所以，下山所说的“做白日梦的人”，很有可能就是拥有 *Reading·Steiner* 的人。如果那些人和我一样，意识到了一个月前的世界线变动的话……如果吹雪也和我一样，有着另一条世界线的记忆的话……回答普金是总统，也并非不可思议。  
+难，难道说……这些症状是，*Reading·Steiner* 吗……看来除我之外，其他人也拥有的可能性很高，能力的程度上可能有所差别。虽然无法确定，但是α世界线的菲莉丝的言行，隐隐约约让我感觉到，她也拥有那个能力。所以，下山所说的“做白日梦的人”，很有可能就是拥有 *Reading·Steiner* 的人。如果那些人和我一样，意识到了一个月前的世界线变动的话……如果吹雪也和我一样，有着另一条世界线的记忆的话……回答普金是总统，也并非不可思议。  
 “戈里巴乔夫？列利钦？”  
 “由季小姐不知道吗？历史课上应该教过吧。”  
 “我……高中时代一直是理科的……”  
@@ -216,23 +216,23 @@
 “啊……”  
 “太好了！你没事喵！”  
 “冈部先生！”  
-接着听到了更多熟悉的声音。菲利斯和琉华子，后面还有枫的身影。  
+接着听到了更多熟悉的声音。菲莉丝和琉华子，后面还有枫的身影。  
 “大家也是，都平安无事……”  
 “冈部先生，我……我……呜呜……”  
 “琉华子……”  
 琉华子一哭，我也不禁眼角开始温热起来。和枫也互相打了个招呼。吹雪像小孩子般黏在枫身边，依然因恐惧而脸色苍白。  
-“菲利斯……果然不是女仆装了啊。”  
-“被人叫做菲利斯也是久违了喵。”  
-菲利斯略显寂寞地说着，接着用手环绕我的脖子，用力地抱住。就这样将粉色的小嘴凑近我的耳边，像是要吻过来。  
+“菲莉丝……果然不是女仆装了啊。”  
+“被人叫做菲莉丝也是久违了喵。”  
+菲莉丝略显寂寞地说着，接着用手环绕我的脖子，用力地抱住。就这样将粉色的小嘴凑近我的耳边，像是要吻过来。  
 “喂喂……？”  
 这到底什么情况——  
 “喵哈哈，不用害羞喵~”  
-恶作剧一般地笑着，菲利斯——不，秋叶留未穗一边装作要吻我，一边在我耳边轻语：  
+恶作剧一般地笑着，菲莉丝——不，秋叶留未穗一边装作要吻我，一边在我耳边轻语：  
 “要小心。不管是防卫省的人还是美军的人都不可信。  
 &emsp;&emsp; 大人总是谎话连篇。大家都不说真话。”  
-是了，菲利斯有一种特技，柴郡猫的微笑（*Cheshire·Brake*），能洞悉他人内心深处的天才洞察力。  
+是了，菲莉丝有一种特技，柴郡猫的微笑（*Cheshire·Brake*），能洞悉他人内心深处的天才洞察力。  
 “嗯……已经切身体会到了。”  
-刚刚才被巧妙地蒙骗过。菲利斯脸上浮现出些许惊讶，放开了我。  
+刚刚才被巧妙地蒙骗过。菲莉丝脸上浮现出些许惊讶，放开了我。  
 “……真悲哀喵。”  
 “是啊……”  
 接着，再次传来了引擎接近的声音。这次的声音来自门对面，基地的内部。是一部车牌上刻有字母E的漆黑豪华轿车，其后跟着一辆小型巴士。两辆车在门前停了下来，与旧识的再会时间，因此而结束了。  
