--- a/steins_gate_0/docs/0041.md
+++ b/steins_gate_0/docs/0041.md
@@ -13,13 +13,13 @@
 “别搞砸了啊！爸爸！”  
 “嗯、嗯……爸爸会加油的。”  
 “一直都空口说白话，结果上次的电影票不也白白浪费了吗？”  
-她指的是之前的圣诞节派对上，真由理和菲利斯在“作战”中特意准备的那两张电影票。  
+她指的是之前的圣诞节派对上，真由理和菲莉丝在“作战”中特意准备的那两张电影票。  
 “啊、那个啊，冈伦和吹雪氏不是突然晕倒了嘛？  
 &emsp;&emsp; 那之后在忙着去探病之类的事情的时候，放映期就结束了……也是没办法嘛……”  
 “但是听说在那之后，打算给你准备新的电影票，也被你拒绝了吧？”  
 “等、听谁说的？”  
 “当然是真由姐和留未姐咯。”  
-“这、这个，那个哦，依靠真由喜和菲利斯碳的话，太没有男子气概了吧。
+“这、这个，那个哦，依靠真由喜和菲莉丝碳的话，太没有男子气概了吧。
 <abbr title="作认真状">*Kiri！*</abbr>”  
 “所以呢？你自己有采取什么行动了吗？”  
 “……”  
