--- a/steins_gate_0/docs/0048.md
+++ b/steins_gate_0/docs/0048.md
@@ -1,6 +1,6 @@
 > <big> **私秘境里的圣痕 - 12 （ED1）** </big>  
 > 1.143688  
-> [ 2011/07/08 ] 冈伦被救出；篝去世，『Amadeus』被消除；桶子、菲利斯、琉华逃亡；真由理、铃羽、真帆失踪。冈伦放弃之下，桶子决心造出时间机器。  
+> [ 2011/07/08 ] 冈伦被救出；篝去世，『Amadeus』被消除；桶子、菲莉丝、琉华逃亡；真由理、铃羽、真帆失踪。冈伦放弃之下，桶子决心造出时间机器。  
 
 “冈……”  
 有声音。  
@@ -50,7 +50,7 @@
 “你现在在哪？”  
 “逃亡中。已经脱离秋叶原了。”  
 “这样啊……”  
-“我联系过菲利斯碳和琉华氏了。两人都去避难了。”  
+“我联系过菲莉丝碳和琉华氏了。两人都去避难了。”  
 “呼……”  
 “呐，冈伦……  
 &emsp;&emsp; 铃羽和真由喜……都联系不上……  
