--- a/steins_gate_0/docs/0052.md
+++ b/steins_gate_0/docs/0052.md
@@ -85,8 +85,7 @@
 这么说来，以前我好像在电视里也听到过这种说法。  
 “嘛，我的话因为在这边没有家人，所以不论如何都是一个人过的啦。  
 &emsp;啊，但是不要觉得我会感到寂寞哦？不要误会。”  
-虽然嘴里这么说，但是在喧嚣的大街上一个人过圣诞节什么的，果然还是很寂寞的吧。可是如果说出这种想法，一定会被说多管闲事什么的，所以我并没说出口。
-
+虽然嘴上这么说，但是在喧嚣的大街上一个人过圣诞节什么的，果然还是很寂寞的吧。可是如果说出这种想法，一定会被说多管闲事什么的，所以我并没说出口。
 
 路上的RINE小剧场：
 『喂喂，冈伦，死库水的话你觉得哪种颜色比较好？』  
@@ -94,7 +93,7 @@
 『呀，我在玩黄游，里面出现了这个选项  
 &emsp;所以在想，如果是冈伦会选什么颜色』  
 「 ![](../pics/0052-1.png) 」  
-『呃，其实我最想问的是真由喜和琉华氏还有菲利斯碳他们的想法』  
+『呃，其实我最想问的是真由喜和琉华氏还有菲莉丝碳他们的想法』  
 「她们会叫警察来抓你的」  
 『对吧  
 &emsp;所以我无奈之下才来问冈伦你啊！！！  
