--- a/steins_gate_0/docs/0006.md
+++ b/steins_gate_0/docs/0006.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 01** </big>  
 > 1.129848  
-> [ 2010/11/29 ] 心理治疗，而后跟真由理到秋叶原见菲利斯和琉华子。  
+> [ 2010/11/29 ] 心理治疗，而后跟真由理到秋叶原见菲莉丝和琉华子。  
 
 “来吧，冈部先生。请放松一点。  
 &emsp;&emsp; 把我的声音化作桥梁，下落着回到过去。  
@@ -73,7 +73,7 @@
 实际上，我被诊断为内心有着严重的心理创伤，因而强行中断了催眠治疗，转为接受心理辅导跟药物治疗。简而言之，就是说一边进行药物治疗的同时一边等待其自然治愈，除此之外没有什么更好的对策的样子。对于这个，是不是受到了昨天去比屋定真帆那看见的“她”的影响，我还不清楚。时间机器与世界线，还有与这些相关发生的那么多事情，不能跟心理医生说就这么直接接受治疗，对方说不定也不知道该怎么下判断。不管怎么说，就结果而言我决定不去考虑那么多东西。  
 “呐真由理，晚饭还没吃吧？去吃点什么东西吧，我请客。”  
 “啊，那样的话，去秋叶原怎么样呀？  
-&emsp;&emsp; 琉华君跟菲利斯呢，想跟久违的冈伦见个面啊。”  
+&emsp;&emsp; 琉华君跟菲莉丝呢，想跟久违的冈伦见个面啊。”  
 秋叶原……么。从这里要回我家的话用走路的就可以了，去秋叶原不是绕了个大原路吗。尽管这样，还是无法拒绝真由理的请求。  
 “啊……好吧。”  
 “真的！那我这就联络他们~”
@@ -84,7 +84,7 @@
 在秋叶原散发传单，然后还穿着圣诞老人服的女仆么……  
 从字面上来看也过于意义不明了。  
 
-“啊！是菲利斯跟琉华君呢！嘟嘟噜~”  
+“啊！是菲莉丝跟琉华君呢！嘟嘟噜~”  
 
 
 <br/>
