--- a/steins_gate_0/docs/0016.md
+++ b/steins_gate_0/docs/0016.md
@@ -73,53 +73,53 @@
 这时屋顶的风声中混入了一声铁门开启的声音。难不成是父亲来了？铃羽仔细观察着昏暗的出入口。出现在那里的是远比父亲更加较小的，戴着猫耳的少女。  
 “喵喵~有了有了~铃喵，晚上好啊喵~”  
 “什么啊，原来是留未姐。”  
-菲利斯踏着轻快的步子走近铃羽。  
-“留未姐是在说谁喵？菲利斯就是菲利斯喵！”  
+菲莉丝踏着轻快的步子走近铃羽。  
+“留未姐是在说谁喵？菲莉丝就是菲莉丝喵！”  
 “留未姐就是留未姐啊。”  
-秋叶留未穗——也就是自称菲利斯，作为父亲的友人，一直到2036年都在向他提供各种各样的支援，所以铃羽从小就和她熟识，一直称她为“留未姐”。当然，这个时代的她似乎无论如何都想要别人叫她“菲利斯”。然而即使询问她理由，也只会像刚才那样，说些“菲利斯就是菲利斯喵！”之类的莫名回答，令铃羽很困扰。  
+秋叶留未穗——也就是自称菲莉丝，作为父亲的友人，一直到2036年都在向他提供各种各样的支援，所以铃羽从小就和她熟识，一直称她为“留未姐”。当然，这个时代的她似乎无论如何都想要别人叫她“菲莉丝”。然而即使询问她理由，也只会像刚才那样，说些“菲莉丝就是菲莉丝喵！”之类的莫名回答，令铃羽很困扰。  
 “看到LAB没人，就在想是不是在这里，看起来是正解喵！  
 &emsp;&emsp; 给，慰问品。虽说只是店里卖剩下的东西有点对不住喵。”  
-菲利斯把一个印有 *MayQueen+Nyan²* 的logo的蛋糕盒拿给铃羽。  
+菲莉丝把一个印有 *MayQueen+Nyan²* 的logo的蛋糕盒拿给铃羽。  
 “爸爸不在LAB真是太好了……”  
 要是在这种时间给他吃这种东西，又要更胖了。  
 “不是桶子喵，而是给铃喵的慰问品喵！”  
 “给我？为什么？”  
 “嘿嘿~明明很喜欢的。”  
-菲利斯一边窃笑，一边用手肘轻戳铃羽的侧腹。  
+菲莉丝一边窃笑，一边用手肘轻戳铃羽的侧腹。  
 “我，我才没……”  
 “苹果挞加上蒙布朗，还有，草莓的水果蛋糕喵~”  
 “唔……”  
 “看~呦~很好吃的哟~”  
-菲利斯故意掀开盖子凑到铃羽脸旁。香甜的奶油与水果的味道顷刻间环绕了她。  
+菲莉丝故意掀开盖子凑到铃羽脸旁。香甜的奶油与水果的味道顷刻间环绕了她。  
 “来，现在就开动也可以喵~别客气开动就好喵~”  
 “咕……”  
-“来来来，啊——张开那可爱的小嘴让菲利斯喂你喵~”  
+“来来来，啊——张开那可爱的小嘴让菲莉丝喂你喵~”  
 “……放……放到冰箱里，我明天吃。”  
 “哈哈。铃喵真是禁欲主义喵。”
-菲利斯笑道，接着把蛋糕盒整个递给铃羽。  
+菲莉丝笑道，接着把蛋糕盒整个递给铃羽。  
 “保质期是明天，所以一定要在明天吃掉喵~”  
 “谢谢。”  
 “不客气喵~”  
-菲利斯恶作剧般地眨眨一只眼睛并点点头，接着抬头仰视着时间机器。  
+菲莉丝恶作剧般地眨眨一只眼睛并点点头，接着抬头仰视着时间机器。  
 “桶子喵的时间机器研究做得怎么样了喵？”  
 “似乎在竭尽全力。留未姐，这台机器，继续放在这也没关系吗？”  
-铃羽环视着整个屋顶问道。这么大的东西放在这里，之所以还没引起骚动，都是菲利斯的功劳。既是在这附近一带拥有影响力的名家的继承人，又对秋叶原的开发做出了巨大贡献，因为这层关系，她主动承担了隐藏时间机器的任务。  
-“嗯。这一层——不如说是楼顶，已经被菲利斯整个借走了，别担心喵。  
+铃羽环视着整个屋顶问道。这么大的东西放在这里，之所以还没引起骚动，都是菲莉丝的功劳。既是在这附近一带拥有影响力的名家的继承人，又对秋叶原的开发做出了巨大贡献，因为这层关系，她主动承担了隐藏时间机器的任务。  
+“嗯。这一层——不如说是楼顶，已经被菲莉丝整个借走了，别担心喵。  
 &emsp;&emsp; 对老板说了是在研究体感游戏喵，虽然这解释有点牵强。”  
 “帮大忙了。”  
-“别在意！为了将世界四精灵从 *Byakhee* 手中救出来，菲利斯无论如何都会出手相助的！”  
+“别在意！为了将世界四精灵从 *Byakhee* 手中救出来，菲莉丝无论如何都会出手相助的！”  
 “是，是吗……  
 &emsp;&emsp; 从以前开始——不，以现在来说是未来吗——我就觉得，  
 &emsp;&emsp; 留未姐说的话有时候非常难懂啊……究竟是什么语言？”  
 “不要思考，用心感受喵！”  
 “不不不……”  
-“呜~冷死了喵。菲利斯还是回家吧喵。”  
+“呜~冷死了喵。菲莉丝还是回家吧喵。”  
 结果，又一次被岔开了话题。对铃羽来说，这名女性无论经过多久都被很多谜团包裹着。  
 “我送你，一起出去吧。”  
 “喵？那么顺便在我家吃了饭再走好啦~”  
 “我并不是因为这个才这么说来着。”  
 “反正平时也没怎么好好吃的吧？
-&emsp;&emsp; 看到铃喵这种禁欲的样子，菲利斯总觉得一定要做些什么喵。  
+&emsp;&emsp; 看到铃喵这种禁欲的样子，菲莉丝总觉得一定要做些什么喵。  
 &emsp;&emsp; 保护欲？母性？总之，一直有这种冲动喵！”  
 “我没问题的——”  
 
@@ -136,7 +136,7 @@
 “糟——”  
 心急的铃羽被放在楼梯的东西绊了一下，一脚踩空的她就这么从中间的部分滚落下来。采取受身动作护住头部的结果，令她的腰结实地撞到地上。忍住疼痛迅速起身，接着奔向楼外。结果只看到奔驰而去的摩托的大大的尾灯。可以看到驾驶的人被全黑的头盔和骑手服包裹着，再加上已经离开了相当一段距离，连是男是女都已经无法分辨了。尖锐的引擎声仿佛在嘲笑着咬牙切齿的铃羽一般，摩托车就这样转向转角处，消失在中央大道上。  
 “铃喵！没事喵？”  
-过了一会儿，菲利斯追了上来。  
+过了一会儿，菲莉丝追了上来。  
 “被逃掉了……”  
 “那个……最好收起来喵！”  
 “啊！”  
