--- a/steins_gate_0/docs/0024.md
+++ b/steins_gate_0/docs/0024.md
@@ -17,7 +17,7 @@
 “那就好。等你哦~”  
 突然，从话筒那边真由理声音的远处，突然传来了其他女孩子们的声音。  
 吹雪：“冈伦~女孩子全部都穿上圣诞装等着了哦~”  
-菲利斯：“冈伦~等你喵~”  
+菲莉丝：“冈伦~等你喵~”  
 绹：“在，在等……你！”  
 吹雪：“来啊，琉华君也是~”  
 琉华：“诶诶？！我并不是女……”  
