--- a/steins_gate_0/docs/0026.md
+++ b/steins_gate_0/docs/0026.md
@@ -7,7 +7,7 @@
 ![](../pics/0026-1.png)
 
 真由理：“啊，冈伦~”  
-菲利斯：“来了喵来了喵！”  
+菲莉丝：“来了喵来了喵！”  
 由季：“全都准备好了哟！”  
 吹雪：“嗨~圣诞快乐！”  
 枫：“冈伦先生，晚上好。”  
@@ -48,7 +48,7 @@
 女性众又是同样的一套惊叹欢迎，不用说是因为她与前一位反差极大的萝莉体型了。  
 “真帆喵，又见面了喵~”  
 “啊啦，喵喵的那位……”  
-因为不久之前见过，她与菲利斯还互有印象。  
+因为不久之前见过，她与菲莉丝还互有印象。  
 “小学生？初中生？”  
 “……别看这样，我可是成年人了。”  
 “呃，对、对不起……”  
@@ -76,10 +76,10 @@
 真由理一副天真无邪的样子向比屋定发动突击，遭到了全力拒绝。倒是雷斯吉宁教授很有兴致地自己找了个纸质三角帽戴在头上。  
 “啊，桶子君来联络了~说是马上到了，铃小姐也在一起。”  
 真由理看着手机说道。看来桶子那边很顺利，不愧是铃羽的父亲。这样最大目标就达成了，接下来就要开始下个任务。事先大家一起决定了要给铃羽一个惊喜，即将回到这里的铃羽并不知道我们在等着她。我们每人配了一个拉炮移动到各自的位置，顺势也叫了雷斯吉宁教授和比屋定一起帮忙。真帆还是有些困惑，教授很则是兴致勃勃。  
-菲利斯：“关灯了喵！”  
+菲莉丝：“关灯了喵！”  
 真由理：“铃小姐，会开心吗？”  
 由季：“铃羽小姐惊讶的表情什么的，平时基本没看过呢。”  
-菲利斯：“但实际上很喜欢甜食喵。”  
+菲莉丝：“但实际上很喜欢甜食喵。”  
 琉华子：“而且，待人也很亲切。”  
 绹：“之前，向她打招呼，她回我了哟。”  
 由季：“诶……我也想要和铃羽小姐关系变得更好呢……”  
@@ -91,7 +91,7 @@
 “偶，偶然会这样嘛……”  
 笨蛋桶子！声音别发抖啊！心里更慌了。还没好吗？号令呢？几乎想要抢先跳出去拉响拉炮了。掌心全是汗。  
 “就是现在喵！”  
-听到了铃羽脱鞋的动静，菲利斯发出号令。房间灯点亮的同时，我们一齐拉响拉炮。  
+听到了铃羽脱鞋的动静，菲莉丝发出号令。房间灯点亮的同时，我们一齐拉响拉炮。  
 噼里啪啦的声音，让铃羽露出一瞬惊惧的表情。下一秒的她的动作，快得让眼睛无法捕捉。铃羽身势一低，往前一踏，拉近了和正前方的由季的距离。比起我制止的声音，铃羽手掌击向由季下颚的速度或许要更快。  
 “呀啊！”  
 由季被铃羽的突进吓到，向后退时脚下绊倒，使得铃羽锋锐的掌击在其鼻尖前切了个空。  
@@ -100,7 +100,7 @@
 
 ![](../pics/0026-3.png)
 
-菲利斯：“stop喵！”  
+菲莉丝：“stop喵！”  
 真由理：“是，是庆祝圣诞的哟——”  
 周围的人总算搞清楚状况，慌乱的声音打破了寂静。由季睁大眼睛，一动不动地靠着铃羽。  
 “这，这是在做什么……？”  
@@ -133,7 +133,7 @@
 真由理：“要，要去哪儿？”  
 铃羽：“诶？去哪……真由姐姐你们要开派对吧？打扰你们就不好了。  
 &emsp;&emsp; 哥哥也真是的，一点也不机灵，这种场合我在也没什么用不是吗？”  
-菲利斯：“没那种事喵！一起来派对喵！”  
+菲莉丝：“没那种事喵！一起来派对喵！”  
 铃羽：“诶？但是……这种事我也没有经验……”  
 真由理：“只是开开心心吃东西聊天而已。所以，一起来吧？”  
 真由理仿佛像说决不让你逃走一样，紧紧用自己的手缠住铃羽的手。  
@@ -143,12 +143,12 @@
 桶子：“好了好了，快坐下吧！”  
 真由理：“铃~小~姐~~（可怜的拖长音的语气）”  
 被真由理拉着同时催促着，铃羽坐到了我旁边。  
-菲利斯：“好了好了，大家！这样就全员到齐了喵！”  
+菲莉丝：“好了好了，大家！这样就全员到齐了喵！”  
 吹雪：“好的！鼓掌鼓掌！”  
 大家跟着吹雪的号令鼓起掌来，桶子则是用电脑，播放着各种大街上耳熟能详的的圣诞歌曲。屋子里原本低迷的气氛，一下子就高涨了起来，我也稍微松了口气。  
 
 “那么，先来一起干杯喵~倒自己喜欢喝的饮料就好了喵~”  
-可能是由于工作经验的关系，菲利斯自动担任起了主持与暖场的角色。于是，大家就开始四处物色着自己想喝的东西。  
+可能是由于工作经验的关系，菲莉丝自动担任起了主持与暖场的角色。于是，大家就开始四处物色着自己想喝的东西。  
 “给，铃羽”  
 我给有些不适应这个气氛的铃羽递过去一杯无酒精的香槟。  
 “啊，啊啊，嗯……  
@@ -196,14 +196,14 @@
 “……啊？”  
 “有趣的东西喵！”  
 “啥！？嗯，那个……”  
-菲利斯……又这么乱来……  
+菲莉丝……又这么乱来……  
 “唔嗯……这个……那个……”  
 不行了，比屋定已经完全不知所措了，比刚才的真由理还要慌张。在ATF上那么爽快的演讲——还能够进行同声翻译——什么的，就好像是别人一样。难道是不擅长即兴表演吗？  
 “呜……meow！！”  
 被迫不得已的比屋定所弄出的“有趣的东西”所渲染，LAB里顿时多了几分暖意，还充满着温馨的气氛，宛如在宠爱一只小动物的感觉。  
 “哦哦！真帆喵！有成为猫耳女仆的资质喵！”  
 “嗯嗯！真帆玲·喵喵诞生的瞬间呢~”  
-而菲利斯跟真由理，好像打从心底里很感动的样子。  
+而菲莉丝跟真由理，好像打从心底里很感动的样子。  
 “呜呜……我也真是的，到底说了些什么啊……”  
 比屋定一脸阴沉地反省着自己刚刚的行为，看到这样子我还是帮她解围一下吧：
 “比屋定小姐，差不多该干杯了。”  
@@ -216,7 +216,7 @@
 “说什么呢？不是很 *cool* 的 *cat* 嘛！”  
 “真帆喵，什么时候能来 *MayQueen* 工作喵？”  
 “没有那个打算啦……”  
-菲利斯跟雷斯吉宁教授也为了能让真帆振作起来而高兴地跟她说着话。  
+菲莉丝跟雷斯吉宁教授也为了能让真帆振作起来而高兴地跟她说着话。  
 “铃小姐，来，干杯~”  
 “铃羽小姐，我也来——”  
 “啊，嗯。”  
