--- a/steins_gate_0/docs/0053.md
+++ b/steins_gate_0/docs/0053.md
@@ -1,379 +1,144 @@
 > <big> **亡失流转的寂寥 - 03** </big>  
 > 1.064750  
-> [ // ] 
+> [ 2010/12/15 ] LAB，琉华子家里来客人伏笔，铃羽透露篝失踪的情报。
 
-和教授们的谈话结束后，我就去了Lab。
-虽然在电话里确认了真有理没事，但我也想要在现实里看到她，自己清楚地看到真由理没事才行。
-从外面看的话，Lab的灯是开着的。
-像要完全摆脱外面已经变冷了的空气一样，我从楼梯飞奔而上，打开了门。
-真由理，在吗——
-开门的过程中，我的胸被一股小小的冲击撞了下。
-啊！……
-啊，不好意思。
-不不。是我不好，对不起。
-看来，好像刚才是准备要出去的样子。
-摆出很抱歉的样子仰望着我的琉华子，不知为什么脸颊上有那么一点红晕。
-在房间里的，只有桶子和琉华子。
-真由理和铃羽的身姿都没看到。
-太好了，如果稍微早点回去了的话，就遇不上冈部先生了。
-唉？难道说在等我吗？
-是的……虽然这么说，但也并不是因为什么大事。只是带了一点东西。
-是馒头哦。
-桶子已经把箱子里放着的一半左右的馒头都吃的精光了。
-因为是送给大家的礼物，所以请尽情吃吧。
-是这样啊，谢谢。
-话说，琉华氏，时间没问题吗？
-啊
-被桶子这么说后抬头看了看钟的琉华子，露出了慌张的样子。
-其实在这之后，家里会有客人来。
-客人？琉华子的吗？
-不是，是爸爸的客人，不知为什么说想让我也一起去……
-爸爸平时会把有同样兴趣的人叫来，和他们聊好长时间。
-因为都是些很难的话题，对我来说是理解不了的，所以平常我都只是做做端茶倒水的工作。为什么这回想要让我一起呢……
-很难的话题是指，宗教什么的，还是那类的话？
-琉华子的家叫柳林神社，在秋叶原也是属于很早以前就有的神社，琉华子的父亲是那边的官司。
-好像不是这样来着···
-和这之前的客人都是在说些什么，有明怎么怎么样的，晴海怎么怎么样的……像这种话题。
-晴海……有明……
-这些关键词莫非……
-真不愧是琉华子的爸爸。真厉害。
-冈部先生和桥田先生，能明白吗？
-嘛，姑且……呢。
-但是，这个话题还是下次吧。有客人会来的话，快点回去比较好。
-啊！嗯，那么我就在此告别……下次还会拜访的呢。
-猛的低下了头，琉华子已经走掉了。
-目送了她之后，我躺在了沙发上。
-真由理呢？
-在 *MayQueen* 吧？今天没来哦。
-那样的话，稍微等等吧……
-还是说去接她呢？
-话说，冈部，刚才的电话什么的……那个，是什么来着？
-刚才……应该在说在去教授他们的地方之前打的确认电话的事吧。
-那个……还是别在意了。大概，是我多虑了。
-是吗？那就没事了……
-那个时候，感到的违和感。
-虽然想到是不是因为感知到了世界线的移动，但是像这样经过了几个小时，果然也没有发现什么变动的样子。
-不如说，连那个感觉到底是不是真的都变得很模糊了。
-记忆什么的，也就是这种东西吧
-特别是对于现在的我。
-比起这些，晴海什么的，真不愧是琉华氏的爸爸。老战士啊。
-战士怎么了？
-比起真由理，铃羽先回来了。
-琉华哥的爸爸，是战士吗？
-……为什么明明称琉华子是琉华哥，对我的称呼却是叔叔呢。
-是的哦。并且是战士中的战士。说是身经百战的强者都不为过。
-诶。是这样啊。但是，琉华哥的家，我听说好像是和神职有关的。
-啊，是这样啊。倒是有说法说神职人员以前也是士兵。
-自己就这么接受了
-确实，琉华哥也很厉害。我理解了。
-很厉害？
-什么方面？
-……刚才的，就当没听过吧。
-对上了铃羽的脸后，就算是现在也觉得很尴尬。
-迄今为止控制来Lab的次数，是因为要避免和铃羽见面。
-冈伦叔。请不要做那种表情呀。
-看来我的思考在表情上浮现出来了的样子。铃羽有些不好意思的说着。
-你在避开我，这种事我是知道的呀。
-……倒不是因为你的错
-话说铃羽，今天又做什么做到这种时候了呀？
-哈！难不成是和哪个男人，约，约会什么的？！不允许！和那种来历不明的男人交往什么的，爸爸不允许！
-不是呀。不是那种事。
-真的？
-虽然我以为只是玩笑，但是桶子却意外地很认真的样子，桶子的口气变得比平常要认真。
-该说是复杂的父爱还是什么的呢。
-都说了是真的。
-那么，就看着爸爸的眼睛说！
-哈。爸会这么说？
-什，什么意思啊？
-明明已经有了妈妈，还总在那里玩奇怪的游戏不是吗？
-那，那个……二次元和三次元到底还是不一样的！
-你啊，不论二次元还是三次元都没关系，这不是你说的吗？
-冈伦！这种话居然在这里说？背叛我什么的好过分啊！
-我倒是不记得关于兴趣的问题上，我什么时候和桶子成为同伴过
-呃，咳咳！总之，是那样的话你今天到底做了什么，快告诉爸爸！
-什么啊……
-没有什么愧疚的事的话，应该是能说的哟！
-铃羽稍微瞥了我一眼，像死了心一般叹了口气。
-……去找了人。
-人……？那么，果然还是男人？！
-不是说了不是吗？！
-小女孩……不，现在已经变得比我还年长了吧。
-对于铃羽的说法，我和桶子对上了脸。
-其实……我乘坐的时间机器里，还有一个人在。
-什么？！
-等等，铃羽！虽然那种事是第一次听到。
-因为到现在为止没说过呢。
-抬起头的铃羽的表情，露出了明显的后悔。
-那个人，是谁？现在怎么样了？
-现在怎么样了……我不知道。
-居然说不知道——
-不小心走散了。在1998年。在这里，秋叶原。
-1998年……距今十二年前。
-从未来来的不止有铃羽。
-要让这个意思要渗透到我脑子里，肯定是需要一些时间的。
-但，但是，为什么会变成这样？
-我和那个孩子，为了寻找IBN5100首先去了1975年。理由的话……叔叔你的话应该知道吧？
-我沉默的点了点头。
-平安无事拿到IBN5100的我们，下一次去了1998年。
-为了回避千年虫问题的任务呢。
-千年虫问题……？
-20世纪末的时候，诺斯托拉达姆斯的大预言的骚动呢。
-但是最终，我记得虽然媒体和专家大肆炒作，但是并没有产生什么大的骚动样子。
-莫非没有骚动是因为，从未来来的约翰·提托的作用吗？
-那样的话……是多么厉害的事啊。
-在1998年，发生了一点问题，和那个孩子分开了。
-那么，就这么分开了后用时间机器跳跃了？
-那是因为没办法啊。因为是那孩子自己从时间机器里跳出去，并且——
-好像想起了什么，铃羽做出了很为难的表情吞下了下半句话。
-当然，我也去找过。在剩余燃料允许的范围内，我进行了数次小型的时间旅行，来回找那个孩子，但是……
-结果还是到现在为止都没找到吗……
-……大概的事情我明白了。但是为什么到现在为止都不说呢？
-丢失那个孩子，是我的失误。我想要自己承担责任。
-……
-真冷淡啊。
-拍了拍仰着头的铃羽的肩膀，桶子温柔地说道。
-我们可是亲子啊。有困难的时候来依靠我也没事的啊。
-爸……
-找那个孩子就行了对吧？那么就让我们来帮助吧！对不，冈伦？
-啊，……我也要？
-当然咯。又不是拜托你改变未来，这种程度的话总可以的吧？
-嘛……
-说实话，一直拒绝铃羽“拯救世界”的要求，我对这些一直都抱有着愧疚。
-虽然能够办到的话，我也很想帮忙……
-我在意的是，找到了之后该怎么办呢。
-话说，那个孩子的名字和年龄？顺便应该是可爱的女孩子吧？是男人的话爸爸可不允许！
+和教授他们的谈话结束后，我就去了LAB。  
+虽然在电话里确认了真有理没事，但我也想在现实中亲眼确认她的安全。  
+从外面看，LAB的灯是开着的。  
+像是要完全摆脱外面已经变冷了的空气一样，我从楼梯飞奔而上，打开了门。  
+“真由理，在吗——”  
+开门的过程中，我的胸口感受到一股小小的冲击。  
+“啊……”  
+“啊，不好意思。”  
+“不不，是我不好，对不起。”  
+看来，刚好撞到了要出门的他。  
+琉华子摆出抱歉的样子仰望着我，不知为何脸颊上有那么一点红晕。  
+房间里只有桶子和琉华子，没看到真由理和铃羽的身影。  
+“太好了，如果稍微早点回去了的话，就遇不到冈部先生了。”  
+“诶？难道说在等我吗？”  
+“是的……虽然这么说，但也并不是什么大事。只是带了一点东西。”  
+“是馒头哦。”  
+箱子里放着日式馒头，已经被桶子吃光大半了。  
+“因为是别人送的，所以请大家一起吃吧。”  
+“是这样啊，谢谢。”  
+“话说，琉华氏，时间没问题吗？”  
+“啊！”  
+听到桶子的话，琉华子抬头看了看钟，显得有些慌张。  
+“其实在这之后，家里会有客人来。”  
+“客人？琉华子的吗？”  
+“不是，是爸爸的客人。不知为什么说想让我也同席……  
+&emsp;&emsp; 爸爸平时会把有同样兴趣的人叫来，和他们聊好长时间。  
+&emsp;&emsp; 因为都是些对我来说很难懂的话题，所以平常我都只是做做端茶倒水的工作。  
+&emsp;&emsp; 为什么这回想要让我一起呢……”  
+“很难懂的话题是指，宗教那一类的？”  
+琉华子的家是柳林神社，很早以前就存在于秋叶原的神社，琉华子的父亲是那边的宫司。  
+“似乎不是关于这类的……和这之前的客人都是在说些什么，有明怎么怎么样，晴海怎么怎么样的……像这种话题。”  
+“晴海……有明……”  
+这些关键词莫非……  
+“真不愧是琉华氏的爸爸。真可怕。”  
+“冈部先生和桥田先生，能明白吗？”  
+“嘛，姑且……吧。但是，这个话题留到下次吧。有客人来的话，快点回去比较好。”  
+“啊！嗯，那么我就告辞了……下次再来拜访。”  
+琉华子猛地低头行礼，然后走掉了。  
 
-是女孩子啦
-OK
-请教名字和三围
-我不知道三围呀。因为分开的时候那孩子还只有10岁。
-幼女啊
-那么现在应该已经22岁了
-名字plaese
-名叫篝……椎名篝
-椎名……？
-很自然的，我对这个姓有些在意。
-在未来，桶子他们身边的，叫椎名的少女。
-铃羽……难道说那孩子……
-嗯。她母亲的名字是——椎名真由理
-篝是真由姐的孩子
-对啊，对于真由理来说，拥有那样的未来也是理所当然的。
-但是我仍旧因这事实而受到了超出想象的冲击
-既然有孩子的话，也就是说同时也有结婚对象吧。
-然后，结婚对象是我——这种事情是不可能发生的。
-要说为什么的话，我在2025年就死了。
-嗯？
-……等一下？
-2036年的时候女孩是10岁的话，那么出生的时候是2026年左右。
-虽然需要仔细考证，但是这样就算是在2025年死亡的我，勉勉强强……还是有可能……的吧！？
-……不，不不不会吧。
-就像铃羽出现在桶子面前，我，我也碰上这种事了！？
-父，父父父……【校注：这一段冈伦脑洞有点污，有没有什么梗可以玩……】
-父亲是谁！？
-实在是没敢这么问。
-嗯？稍微等等。既然女孩叫椎名的话，姓氏没有变啊？这么说的话……
-篝是战争遗孤。真由姐收留了没有归宿的她并抚养她长大。
-啊……这的确挺像真由喜的作风
-听到这些，我双重意义上感到了安心，也稍微陷入了自我厌恶之中。
-就算在未来真由理和谁结婚，只要那家伙幸福的话，这明明是值得高兴的事情啊。
-我受真由姐之托照顾篝。所以，变成这种状况是不行的——
-那孩子之前一直粘着真由姐，到这个时代一个人都不认识，内心肯定一直充满着不安……
-那孩子为什么会走散？刚才，说到有麻烦了吧
-如果只有10岁坐着时间机器来到未知的时代，能依靠的应该只有铃羽一人。
-应该不可能独自一人离开铃羽。
-我也不清楚。但是跳回过去的篝。精神显得相当的不安定……
-原来如此。仔细想想，这也不是不可能的。
-只有10岁的少女。突然就被带到陌生的过去世界。
-不可能不紧张。
-有关于那个女孩的照片和别的什么吗？
-啊，嗯……
-在铃羽给出的照片中，有两名女性。
-一名是成熟女性。虽然没有拍到脸，很可能是二十多年之后的真由理。
-另一名少女面露怯色，就像想要躲在这名女性的影子里一样。这孩子就是椎名篝？
-……这个孩子成长到22岁了吗。稍微有点想象不出来啊
-……当然前提是还活着的话。
-就算日本再怎么和平安全。像这么小的孩子想一个人生活下去还是太严酷了。
-如果运气好的话，她可能受到保护被带到了某处的设施里面。如果不是这样的话——
-铃羽是不是也考虑到这种可能性了。这种话实在是说不出口。
-……呐，冈伦。帮个忙吧
-……毕竟是真由理的养女。这样的话，我也想找到她
-但是……铃羽觉得可以吗？对于我来帮忙这件事……？
-铃羽现在肯定在轻视着我。
-那个放弃本来还有拯救世界这个机会的我。
-像我这种人来帮忙，她觉得这样真的好吗……
-……叔叔如果不介意的话。我觉得人还是越多越好……
-……这样啊。那样的话，我会帮忙
-当然，我并不把这视为赎罪。
-谢谢
-真由喜的幼女【校注：“幼女”和“养女”同音】怎么了吗~？
-突然，全员一齐向在极近距离处传出声音的地方望去。
-嘟嘟噜~ 冈伦，真的在这等着呢
-真由理……
-……？怎么了？
-看到真由理，我终于感到了安心。
-太好了……真由理……
-握着那双小手，切实地传来了体温。
-还活着。
-冈,冈伦?
-啊……抱歉……
-没事……并不讨厌所以没关系……
-真由姐……什么时候来的？
-嗯？刚刚才过来哟？
-失算了……
-太过专注于铃羽的话，没有注意到真由理进入房间。
-呐呐，我听到真由喜的幼女什么的，到底在说什么呀？
-嗯……这个嘛……这个……
-不妙。
-虽然真由理知道铃羽是从未来过来的，但是突然听到未来的女儿这种事的话刺激是在是太强烈了。
-一定要想办法糊弄过去。
-真，真由理还很年幼——所以被称为幼女，对吧？
-诶？啊，没错。真由喜是幼女好可爱【校注：HENTAI乙】
-嗯，经常被人说是童颜呢。虽然自己想变得像由季那样成熟呢【校注：我也知道自己话有点多，但是，我已经看到这里会有一大波弹幕了】
-可能只有食量这一点像真正的大人吧
-诶嘿嘿~
-并没有在夸你啊，真由理。
-总之，总算糊弄过去了。
-对了。说到吃的，冈伦在圣诞节有什么想吃的吗？
-圣诞？是在说派对的事情吗？
-嗯
-随便什么都行
-只要是能吃的就行……
-圣诞派对吗……
-铃小姐是第一次见到吗？
-因为在我们那个时代，没有举办派对的空闲呢
-但是好像只有一次，爸不知从哪里弄来了很好吃的鸡
-然后真有姐说要自己来料理它，爸阻止了……
-铃羽像是在怀念过去——不，在怀念未来的样子，表情很缓和地望向真由理。
-跟平时比起来，虽然只是稍微好吃一点点的饭菜，但就算这样我还是很开心……
-在通向第三次世界大战的这个未来里，应该没有庆祝的空闲。
-就算在这样的世界里，真由理果然还是真由理——和现在一样，想给大家带来笑容——怀着这样的心情吧。
-桶子想要吃些什么？
-我只要有可爱的女孩纸穿着圣诞服的话，我就满足了哦
-嗯。料理要做多少呢？
-虽然是要和由季一起准备的……，对了，叫琉华君和菲利丝也来帮忙把
-真由理脑子里面，已经装满了圣诞派对的事情了。
-冈伦有想邀请来派对的人吗？
-我？我并没有……
-说完，突然，脑中浮现出一个身影。
-比定屋真帆。
-虽然她说过圣诞节是要跟家人一起过的……
-冈伦？
-……没，并没有想邀请谁
-她会度过一个怎样的圣诞啊。
-把真由理送回家之后。
-一个人在路上，回想起白天的事情。
-如果——
-如果那是世界线变动……
-造成这种状况的原因是什么？
-有谁成功开发了类似电话烤箱（暂定）的东西，向过去发送了短信。这种可能性是最高的。
-因为就算是我们也成功做出来了。
-并不是不可能的事情。
-还有其他的可能性的话——
-不，还是算了吧。
-那是我的错觉。
-而且，就算世界线变动了，原因也不在我们这里。
-已经不会跟我扯上关系了。
-独自一人，思考着一些不必要的事情。
-……
-我从口袋中取出手机，点击了早已看惯的那个图标。
-Hello—
-“红莉栖”跟以前一样带着清秀的面容说到。
-都这个时间了怎么了？
-没什么……不知怎么想说说话。打扰到你了吗？
-并没有感到麻烦。和你说话，反正对我自己也有好处。
-本来就是人工智能。
-应该不管什么时间段都不会不方便。
-见到前辈了吧？
-嗯
-说了些什么？
-说了什么……就是报告关于我和你对话的内容什么的
-就这些？有没有邀请去哪里？
-……还在说这样的话吗？对着比定屋说说看。又会被发火哦
-因为，可能前辈终于时来运转了。不好好抓住这个机会的话
-“红莉栖”不管说多少次，都想帮我和真帆牵线搭桥。
-真是的。明明还有别的能考虑的事情。
-考虑的事情，吗。
-如果是她的话，关于那个话题，会不会提供一点提示呢。
-呐，稍微问一下……要搜索下落不明的人，该怎么做？
-真是唐突的问题呢
-身边发生这样的事情了
-但是，不知道自己该怎么做
-跟我说详细一点
-中途开始主动问了起来
-真的是充满好奇心的家伙。
-这是……
-这是不方便说的事情？
-……因为不仅仅是跟我有关的事情
-这样就算是想讨论的话也不可能啊
-也是呢……
-只要一般论就行。让我听听意见就行……
-这样呢……最好的就是去找警察
-极其理所当然的回答。
-然后就是去找信用调查所或者找找过去的新闻报道。啊，但是，这些事已经做了吧……
-怎么样了呢……
-怎么样什么的……难道这些都没准备就想去找了？
-我也是今天刚知道这事。稍后去确认一下
-就算这么说，篝是来自未来的少女。
-即使是铃羽在这个世界也没有户籍。
-所以拜托公共机关基本不可行。
-在美国存在通过探测术和透视来找人的人吧？
-难道，你想相信那完全没有科学根据的东西？
-不，只是说说
-太好了。如果说相信的话，就再也不想和你说话了
-真的是，不管在哪红莉栖都是这个样子。
-谢谢，参考了
-祈祷能你找到
-啊……还有……
-什么？
-啊……没，没什么
-什么嘛。好让人在意
-真的没什么。那么今天就到这里
-…………
-…………
-……我到底要说什么啊。
-因为真由理说要开圣诞派对，如果可以的话你也——什么的。
-“红莉栖”再怎么说也是人工智能。
-明明只是存在于电脑中的东西。
-尽管如此，我还是渐渐开始把“红莉栖”当成是现实存在的东西了吗……
-怎么样，爸。有什么头绪了吗？
-没。很遗憾什么也没有找到
-这样啊……
-寻找未来真由理的养女，跟所想的一样举步维艰。
-问一下，已经去过警察那边了吗？
-嗯。也算是去过了。但是没有提出搜索申请
-和想的一样，提出这样的东西，提出者的身份也会受到确认，铃羽没有用这种办法。
-之后调查了一下了解到，行踪不明者的搜查申请好像是要由家族或者恋人这种关系的人提交才行。
-我昨天，稍微黑进了警察的数据库，也没有相关的情报。
-……我想也是呢
-这么说的话，冈伦也看过了？
-只是不像桶子那样看内部情报，呐
-至少在警察局的主页上刊载着身份不明的人员的情报。
-但是这些并没有涵盖很久以前的信息，情报不是很多。
-刊载的情报上只纪录着年龄，性别，还有服装和随身携带的物品。
-这对于我们来说，椎名篝这个少女身上没有能够用于对照的东西
-但是，就算是看上去和平的世界，身份不明和行踪不明的人还是有很多呢
-这点我也这么认为。
-身份不明的遗体数量，仅东京一年就有100具以上。
-这个规模在全国范围内扩大。如果再算上过去的12年的话，就会变成非常庞大的数字。
-更不要说加上行踪不明的人，这数字在一年里就有10万人以上。
-而且，在这之中有五分之一是10多岁的人。
-不过这之中主要原因是离家出走，在被递交了搜索申请后70%的在一周之内就被找到了。
-但是反过来，当然也有没有找到的人。
-事实是，有5%的在长时间之后仍未知晓其行踪，最后变成了不知其是死是活的状态。
-椎名篝也卷入事件之中，或者说是——
-我从沙发上站起来。
-嗯？冈伦，要去哪？
-想稍微再调查一下
-反正马上大学就到假期了，也没什么事情可做。
-而且，虽然一开始并不感兴趣，但不知不觉间我也在意起椎名篝这名少女的行踪。
-而且
-谢谢，冈伦叔……
-……这点事情没什么的
-不。就算这样还是谢谢你
-在寻找篝的这段时间里，铃羽也会说一些关于未来的一些琐事。
-每次见面的时候，如果彼此都重复着跟之前同样的对话对现在的我来说是非常残酷的事情。
-哪怕能稍微转移一点注意力的话，对我来说真是帮大忙了。
-——虽然这样说着。  
+目送她离开之后，我倒进沙发里。  
+“真由理呢？”  
+“在 *MayQueen* 吧？今天没来哦。”  
+那样的话，稍微等等……还是说去接她呢？  
+“话说，冈伦，刚才的电话什么的……那个，是怎么回事？”  
+刚才……应该是说在去见教授他们之前打的确认行程的电话吧。  
+“那个……别在意了。大概，是我多虑了。”  
+“是吗？那就不管了……”  
+那个时候，感到的违和感，虽然怀疑是不是因为感知到了世界线的移动，但是像这样经过了几个小时，果然也没有发现什么变化的样子。不如说，连是不是真的有过那个感觉都变得很模糊了。记忆什么的，也就是这种东西吧。特别是对于现在的我。  
+“比起这些，晴海什么的，真不愧是琉华氏的爸爸。老战士啊——”  
+“战士怎么了？”  
+比起真由理，铃羽先回来了。  
+“琉华哥的爸爸，是战士吗？”  
+……为什么明明称琉华子为哥哥，对我的称呼却是叔叔呢？  
+“是的哦，并且是战士中的战士，说是身经百战的强者都不为过。”  
+“诶，这样啊。但是，琉华哥的家，我听说好像是和神职有关的。  
+&emsp;&emsp; 啊，也对，倒是听说以前的神职人员也是士兵。”  
+就这么自顾自地接受了。  
+“确实，琉华哥也很厉害。我理解了。”  
+很、很厉害？什么方面？  
+……刚才的，就当没听过吧。  
+
+“……”  
+“……”  
+到现在，对上铃羽的脸，我还是觉得很尴尬。迄今为止我刻意控制来LAB的次数，就是要避免和铃羽见面。  
+“冈伦叔叔，请不要摆出那种表情。”  
+看来我的思考通过表情暴露出来了，铃羽有些为难地说着。  
+“你在躲着我，这种事我是知道的。”  
+“……这也不是你的错。”  
+“话说铃羽，今天又这么晚回来，去做什么了？  
+&emsp;&emsp; 哈！难不成是和哪个男人，约、约会什么的？！  
+&emsp;&emsp; 不允许！和那种来历不明的男人交往什么的，爸爸不允许！”  
+“不是啦，不是那种事。”  
+“真的？”  
+虽然我以为只是玩笑，但是桶子却意外地很认真的样子，口气变得比平常要认真。该说是复杂的父爱还是什么呢。  
+“是真的啦。”  
+“那么，就看着爸爸的眼睛说！”  
+“唉…爸爸你还好意思说？”  
+“什、什么意思啊？”  
+“明明已经有了妈妈，还总在那里玩奇怪的游戏不是吗？”  
+“那、那个……二次元和三次元到底还是不一样的！”  
+“你啊，不论二次元还是三次元都没关系，你以前不是这么说的吗？”  
+“冈伦！这话居然在这种时候说？你个叛徒，好过分啊！”  
+我倒是不记得在关于兴趣的问题上，什么时候和桶子成为同伴过。  
+“……”  
+“呃，咳咳！总之，那样的话，你今天到底做了什么，快告诉爸爸！”  
+“什么啊……”  
+“问心无愧的话，应该是能说的哟！”  
+“……”  
+铃羽稍微瞥了我一眼，像死了心一般叹了口气。  
+“……去找了人。”  
+“人……？那么，果然还是男人？！”  
+“都说了不是啦！”
+“小女孩……不，现在已经变得比我还年长了吧。”  
+对于铃羽的说法，我和桶子对视了一下。  
+“其实……我乘坐的时间机器里，还有一个人在。”  
+
+“什么？！”  
+“等等，铃羽！这事我还是第一次听到！”  
+“因为一直以来我都没说出来呢……”  
+铃羽垂下头，脸上明显浮现出后悔的神情。  
+“那个人是谁？现在怎么样了？”  
+“现在怎么样……我不知道。”  
+“不知道的意思是——”  
+“不小心走散了。1998年，在这里，秋叶原。”  
+1998年……距今12年前。从未来跳跃回来的不止有铃羽，我的大脑还需要一些时间来彻底接受这个概念。  
+“但、但是，为什么会变成这样？”  
+“我和那个孩子，为了寻找IBN5100首先去了1975年。理由的话……叔叔你的话应该知道吧？”  
+我沉默地点了点头。
+“平安无事拿到IBN5100的我们，下一站去了1998年。为了回避千年虫问题的任务。”  
+“千年虫问题……？”  
+20世纪末的时候，诺斯托拉达姆斯的大预言中会引起严重动荡的问题吧。但是最终的记忆中，虽然媒体和专家大肆炒作，但是并没有发生什么大动荡的样子。莫非没有动荡，是由于从未来回来的约翰·提托的作用吗？这样的话……真是了不得啊。  
+“在1998年，发生了一点问题，就和那个孩子分散了。”  
+“然后，你就自己用时间机器跳跃了？”  
+“我也是没办法啊。那孩子是自己从时间机器里跳出去的，并且——”  
+好像想起了什么，铃羽一脸苦涩地吞下了后半句话。  
+“当然，我也去找过。在剩余燃料允许的范围内，我进行了数次小跨度的时间旅行，来回找那个孩子，但是……”  
+也就是说到现在为止都还没找到吗……  
+“……事情的大概我明白了。但是为什么一直都不说呢？”  
+“那孩子的失踪是我的失误。我想要自己承担责任。”  
+“真见外呐……”  
+桶子温柔地拍了拍垂着头的铃羽的肩膀。  
+“我们可是父女啊。有困难的时候尽管来依靠我吧。”  
+“爸爸……”  
+“找那个孩子就行了对吧？那就让我们来帮忙吧！对吧，冈伦？”  
+“为、为什么……我也要吗？”  
+“当然咯。又不是拜托你改变未来，这种程度的话总可以的吧？”  
+“嘛……”  
+说实话，一直拒绝铃羽“拯救世界”的要求，我对此一直都抱有愧疚。能够办到的话，我也很想帮忙的……  
+我更在意的是，找到了之后该怎么办呢。  
+“那么，那个孩子的名字和年龄？顺便，应该是可爱的女孩子吧？是男人的话爸爸可不允许！”  
+“是女孩子啦。”  
+“OK。请教名字和三围。”  
+“三围什么的才不知道呢。因为分开的时候那孩子还只有10岁呢。”  
+“幼女啊。”  
+“那现在的话，应该已经22岁了啊。”  
+“名字plaese！”  
+“名字是篝……椎名篝。”  
 
 
 <br/>
